/* English */ split ety. <ferret#20514102>

--- a/en/f/ferret.8237.wikitext
+++ b/en/f/ferret.8237.wikitext
@@ -2,27 +2,24 @@
 {{wikipedia}}
 [[Image:Ilder.jpg|thumb|Ferrets (Mustela putorius)]]
 
-===Etymology===
-{{etyl|enm}} {{term|furet|lang=enm}}, {{term|ferret|lang=enm}}, from {{etyl|xno}} ''firet, furet'', diminutive of {{etyl|fro}} {{term|fuiron||weasel, ferret|lang=fro}}, from {{etyl|LL.}} {{term|furo||cat; robber|lang=la}}, diminutive of {{etyl|la}} {{term|fur||thief|lang=la}}.
-
 ===Pronunciation===
 * {{enPR|fĕr'ət}}, {{IPA|/ˈfɛrɪt/}}, {{X-SAMPA|/"fer@t/}}
 *: {{rhymes|ɛrɪt}}
 
-===Noun===
+===Etymology 1===
+{{etyl|enm}} {{term|furet|lang=enm}}, {{term|ferret|lang=enm}}, from {{etyl|xno}} ''firet, furet'', diminutive of {{etyl|fro}} {{term|fuiron||weasel, ferret|lang=fro}}, from {{etyl|LL.}} {{term|furo||cat; robber|lang=la}}, diminutive of {{etyl|la}} {{term|fur||thief|lang=la}}.
+
+====Noun====
 {{en-noun}}
 
 # An often domesticated [[mammal]] rather like a [[weasel]], descended from the [[polecat]] and often trained to [[hunt]] [[burrow]]ing animals.
 # The [[black-footed ferret]], {{taxlink|Mustela nigripes|species}}.
 # A [[diligent]] [[searcher]].
-# {{dated}} A [[tape]] of [[silk]], [[cotton]], or [[ribbon]], used to tie [[document]]s.
-#* Charles Dickens, ''Bleak House''
-#*: red tape and green '''ferret'''
 
-====Synonyms====
+=====Synonyms=====
 * {{sense|domesticated polecat}} {{taxlink|Mustela putorius furo|subspecies}}
 
-====Translations====
+=====Translations=====
 {{trans-top|the mammal ''Mustela putorius furo''}}
 * Albanian: {{t-|sq|qelbësi}}
 * Basque: [[hudo]]
@@ -84,7 +81,7 @@
 * West Frisian: [[fret]]
 {{trans-bottom}}
 
-===Verb===
+====Verb====
 {{en-verb}}
 
 # To hunt [[game]] with ferrets.
@@ -92,8 +89,20 @@
 #* '''1922''', {{w|Virginia Woolf}}, ''{{w|Jacob's Room}}'' Chapter 1
 #*: She '''ferreted''' in her bag; then held it up mouth downwards; then fumbled in her lap, all so vigorously that Charles Steele in the Panama hat suspended his paint-brush.
 
-===See also===
+====See also====
 * [[Appendix:List of sequenced animal genomes]]
+
+===Etymology 2===
+{{etyl|it}} {{fioretto|lang=it}}
+
+====Noun====
+{{en-noun|?}}
+
+# {{dated}} A [[tape]] of [[silk]], [[cotton]], or [[ribbon]], used to tie [[document]]s.
+#* Charles Dickens, ''Bleak House''
+#*: red tape and green '''ferret'''
+
+
 [[Category:en:Mustelids]]
 
 ----
