--- a/en/p/pajamas.4756.wikitext
+++ b/en/p/pajamas.4756.wikitext
@@ -5,7 +5,7 @@
 * [[pyjamas]] {{qualifier|Australia|UK|Canada}}
 
 ===Etymology===
-From {{etyl|ur}}/{{etyl|hi}} {{term|پایجامه|tr=pāyjāma|lang=ur}}/{{term|पैजामा|tr=payjāmā|lang=hi}}, from {{etyl|fa}} {{term|پايجامه / پاجامه|tr=pāyjāma / pājāma||leg garment|lang=fa}}.
+From {{etyl|ur}}/{{etyl|hi}} {{term|پایجامه|tr=pāyjāma|lang=ur}} / {{term|पैजामा|tr=payjāmā|lang=hi}}, from {{etyl|fa}} {{term|پایجامه|پايجامه / پاجامه|tr=pāyjāma / pājāma|leg garment|lang=fa}}.
 
 ===Pronunciation===
 * {{IPA|/pəˈdʒɑ.məz/|/pəˈdʒæ.məz/}}
