--- a/en/b/bid.6797.wikitext
+++ b/en/b/bid.6797.wikitext
@@ -56,7 +56,7 @@ From {{etyl|enm}} {{term|bidden|lang=enm}}, from the {{etyl|ang}} verb {{term|bi
 {{trans-bottom}}
 
 ===Etymology 2===
-From {{etyl|enm}} {{term|beden|lang=enm}}, from the {{etyl|ang}} verb {{term|beodan|bēodan|offer, announce|lang=ang}}, from {{etyl|gem-pro}} {{recons|beudaną||to offer|lang=gem-pro}}, from {{etyl|ine-pro}} {{recons|bʰewdʰ-||be awake, aware|lang=ine-pro}}. Conflated with the {{etyl|ang}} verb {{term|biddan||ask, demand|lang=ang}} (see Etymology 1 above). Compare Dutch {{term|bieden|lang=nl}}, German {{term|bieten|lang=de}}, Danish {{term|byde|lang=da}}.
+From {{etyl|enm}} {{term|beden|lang=enm}}, from the {{etyl|ang}} verb {{term|beodan|bēodan|offer, announce|lang=ang}}, from {{etyl|gem-pro}} {{recons|beudaną||to offer|lang=gem-pro}}, from {{etyl|ine-pro}} {{recons|bʰewdʰ-||be awake, aware|lang=ine-pro}}. Conflated with the {{etyl|ang}} verb {{term|biddan||ask, demand|lang=ang}} (see Etymology 1 above). Compare Low German {{term|beden|lang=nds}}, Dutch {{term|bieden|lang=nl}}, German {{term|bieten|lang=de}}, Danish {{term|byde|lang=da}}.
 
 ====Verb====
 {{en-verb|bids|bidding|bid|bid}}
