--- a/en/b/bent.6793.wikitext
+++ b/en/b/bent.6793.wikitext
@@ -110,7 +110,7 @@ Origin uncertain.  Apparently representing {{etyl|ang}} {{term||beonet-}} (attes
 #*: His spear a '''bent''', both stiff and strong.
 #* '''1888''', Rudyard Kipling, ‘The Strange Ride of Morrowbie Jukes’, ''The Phantom ’Rickshaw and Other Tales'', Folio Society 2005, p. 121:
 #*: Gunga Dass gave me a double handful of dried '''bents''' which I thrust down the mouth of the lair to the right of his, and followed myself, feet foremost [...].
-#* '''1913''', D. H. Lawrence, ''Sons and Lovers'', Penguin 2006, pp. 277-8:
+#*'''1913''', [[w:D. H. Lawrence|D.H. Lawrence]], ''[[s:Sons_and_Lovers|Sons and Lovers]]'', [[s:Sons and Lovers/Chapter 9|chapter 9]]
 #*: Clusters of strong flowers rose everywhere above the coarse tussocks of '''bent'''.
 # A grassy area, [[grassland]].
 #* ''The Ballad of Chevy Chase''
