--- a/en/b/bind.6798.wikitext
+++ b/en/b/bind.6798.wikitext
@@ -1,26 +1,13 @@
 ==English==
 {{wikipedia|dab=bind}}
 
-===Etymology===
+===Etymology 1===
 From {{etyl|enm|en}} {{term|binden|lang=enm}}, from {{etyl|ang|en}} {{term|bindan|lang=en}}, from {{etyl|gem-pro|en}} {{recons|bindaną|lang=gem-pro}} (compare West Frisian {{term|bine|lang=fy}}, Dutch {{term|binden|lang=nl}}, Low German {{term|binnen|lang=nds}}, German {{term|binden|lang=de}}, Danish {{term|binde|lang=da}}), from {{etyl|ine-pro|en}} {{recons|bʰendʰ-||to tie|lang=ine-pro}} (compare Welsh {{term|benn||cart|lang=cy}}, Latin {{term|offendix|offendīx|knot, band|lang=la}}, Lithuanian {{term|beñdras||partner|lang=lt}}, Albanian {{term|bend||servant,henchman|lang=sq}}, {{term|bind||to convince, persuade, tame|lang=sq}}, Ancient Greek {{term|πεῖσμα|tr=peisma||cable, rope|lang=grc}}, Sanskrit {{term|बध्नाति|tr=badhnāti|lang=sa}}).
 
 ===Pronunciation===
 * {{IPA|/baɪnd/}}
 * {{audio|en-us-bind.ogg|Audio (US)}}
 * {{rhymes|aɪnd}}
-
-===Noun===
-{{en-noun}}
-
-# That which binds or ties.
-# A [[troublesome]] situation; a [[problem]]; a [[predicament]] or [[quandary]].
-# Any twining or climbing plant or stem, especially a [[hop]] vine; a [[bine]].
-# {{music}} A [[ligature]] or [[tie]] for grouping notes.
-# {{chess}} A strong grip or [[stranglehold]] on a position that is difficult for the opponent to break.
-#: ''the Maróczy '''Bind'''''
-
-====Synonyms====
-* See also [[Wikisaurus:difficult situation]]
 
 ===Verb===
 {{en-verb|binds|binding|bound|'''[[bound]]''' ''or rarely'' '''[[bounden]]'''}}
@@ -142,6 +129,22 @@ From {{etyl|enm|en}} {{term|binden|lang=enm}}, from {{etyl|ang|en}} {{term|binda
 
 ====Derived terms====
 * [[bindweed]]
+
+===Etymology 2===
+From the above verb.
+
+===Noun===
+{{en-noun}}
+
+# That which binds or ties.
+# A [[troublesome]] situation; a [[problem]]; a [[predicament]] or [[quandary]].
+# Any twining or climbing plant or stem, especially a [[hop]] vine; a [[bine]].
+# {{music}} A [[ligature]] or [[tie]] for grouping notes.
+# {{chess}} A strong grip or [[stranglehold]] on a position that is difficult for the opponent to break.
+#: ''the Maróczy '''Bind'''''
+
+====Synonyms====
+* See also [[Wikisaurus:difficult situation]]
 
 ===References===
 * {{R:Century 1911}}
