--- a/en/h/hawaiite.776678.wikitext
+++ b/en/h/hawaiite.776678.wikitext
@@ -10,13 +10,13 @@
 ===Noun===
 {{en-noun}}
 
-#{{geology}} An [[olivine]] [[basalt]] intermediate between alkali olivine and [[mugearite]].
-# {{mineralogy}} A gem variety of [[olivine]] [[peridot]].
+# {{geology}} An [[olivine]] [[basalt]] intermediate between alkali olivine and [[mugearite]].
+# {{mineral}} A gem variety of [[olivine]] [[peridot]].
 
 ====Derived terms====
-*[[hawaiitic]]
+* [[hawaiitic]]
 
 ====See also====
-*[[Hawaiian peridot]]
+* [[Hawaiian peridot]]
 
 [[zh:hawaiite]]
