Reverted edits by [[Special:Contributions/208.54.40.175|208.54.40.175]]. If you think this rollback is in error, please leave a message on my talkpage. <ios#20613971>

--- a/en/i/ios.746896.wikitext
+++ b/en/i/ios.746896.wikitext
@@ -1,5 +1,10 @@
 ==English==
 
+===Noun===
+'''ios'''
+
+# {{plural of|io}}
+
 ===Anagrams===
 * [[iso#English|iso]], [[ISO#English|ISO]]
 * [[OSI#English|OSI]]
