--- a/en/a/abandonar.4113.wikitext
+++ b/en/a/abandonar.4113.wikitext
@@ -64,6 +64,12 @@
 
 ==Portuguese==
 
+===Etymology===
+From {{etyl|fro|pt}} {{term|abandoner|lang=fro}}, formed from {{term|à|a|at, to|lang=fro}} + {{term|bandon||jurisdiction, control|lang=fro}}, from {{etyl|LL.|pt}} {{term|bannum||proclamation|lang=la}}, {{term|bannus|lang=la}}, {{term|bandum|lang=la}}, from {{etyl|frk|pt}} {{recons|ban|lang=frk}}, {{recons|bann|lang=frk}}, from {{etyl|gem-pro|pt}} {{recons|bannaną||to proclaim, command|lang=gem-pro}}, from {{etyl|ine-pro|pt}} {{recons|bʰeh₂-|lang=ine-pro}}, {{recons|bʰa-||to speak|lang=ine-pro}}.
+
+===Pronunciation===
+* {{a|PT}} {{IPA|/ɐβɐ̃duˈnaɾ/|lang=pt}}
+
 ===Verb===
 {{pt-verb|abandon|ar}}
 
