--- a/en/p/public school.34050.wikitext
+++ b/en/p/public school.34050.wikitext
@@ -2,6 +2,7 @@
 
 ===Etymology===
 From {{term|public|lang=en}} (in the English sense, "open to all members of a community"; in the North American/Australian sense, "carried out or funded by the state on behalf of the people") + {{term|school|lang=en}}.
+cheeseburgers are yummay
 
 ===Alternative forms===
 * [[public-school]] {{qualifier|attributive use}}
