--- a/en/p/public school.34050.wikitext
+++ b/en/p/public school.34050.wikitext
@@ -1,5 +1,5 @@
 ==English==
-
+[[File:Nalgonda Public School.jpg|right|thumb|[[w:Nalgonda Public School|Nalgonda Public School]], a private school in [[w:Nalgonda|Nalgonda]], [[India]]]]
 ===Etymology===
 From {{term|public|lang=en}} (in the English sense, "open to all members of a community"; in the North American/Australian sense, "carried out or funded by the state on behalf of the people") + {{term|school|lang=en}}.
 
