--- a/en/e/even so.742278.wikitext
+++ b/en/e/even so.742278.wikitext
@@ -8,13 +8,13 @@
 
 ====Translations====
 {{trans-top|despite the contrary}}
-* [[Catalan]]: {{t-|ca|tot i així}}, {{t-|ca|tot i això}}
+* Catalan: {{t-|ca|tot i així}}, {{t-|ca|tot i això}}
 * Dutch: {{t+|nl|desondanks}}, {{t-|nl|zelfs dan}}, {{t+|nl|toch}}
 * Hebrew: {{t-|he|בכל זאת|tr=bekhol zot|alt=בְּכָל זֹאת|sc=Hebr}}
 {{trans-mid}}
 * Mandarin: {{t|cmn|即使这样|sc=Hani}}
 * Russian: {{t-|ru|несмотря на это|sc=Cyrl}}
-* Spanish: {{t-|es|aun así}}
+* Spanish: {{t-|es|aún así}}
 {{trans-bottom}}
 
 [[Category:English adverbs]]
