--- a/en/m/mill.4306.wikitext
+++ b/en/m/mill.4306.wikitext
@@ -115,6 +115,7 @@ From {{etyl|enm|en}} {{term|mille|lang=enm}}, {{etyl|ang|en}} {{term|mylen|lang=
 {{trans-top|building housing a grinding apparatus}}
 * Asturian: {{t-|ast|molín|m}}
 * Azeri: {{t+|az|dəyirman}}
+* Basque: {{t|eu|errota}}, {{t|eu|eihera}}
 * Catalan: {{t+|ca|molí|m}}
 * Czech: {{t+|cs|mlýn}}
 * Esperanto: {{t-|eo|muelejo}}
