teri talk <bent#20690474>

--- a/en/b/bent.6793.wikitext
+++ b/en/b/bent.6793.wikitext
@@ -159,6 +159,25 @@ See also verb form {{term|bennen|lang=nl}}.
 
 ----
 
+==Scots==
+
+===Alternative forms===
+* {{term|bynt|lang=sco}}
+
+===Etymology===
+From {{etyl|ang|sco}} {{term|beonet|lang=ang}}, cf. {{etyl|enm|sco}} {{term|bent|lang=enm}}.
+
+===Pronunciation===
+* {{IPA|lang=sco|/ˈbɛnt/}}, {{X-SAMPA|/bent/}}
+
+===Noun===
+{{sco-noun}}
+
+# {{context|archaic|14th century|lang=sco}} Coarse or wiry grass growing upon moorlands.
+# {{context|archaic|15th century|lang=sco}} An area covered with coarse or wiry grass; a [[moor]].
+
+----
+
 ==Turkish==
 
 ===Etymology===
