t+mt:[[suffara]] ([[WT:EDIT|Assisted]]) <whistle#20704313>

--- a/en/w/whistle.7360.wikitext
+++ b/en/w/whistle.7360.wikitext
@@ -62,6 +62,7 @@
 * Latvian: {{t-|lv|svilpe|f}}
 * Luxembourgish: {{t+|lb|Päif|f}}
 * Malay: {{t-|ms|wisel}}
+* Maltese: {{t|mt|suffara|f}}
 * Meru: {{tø|mer|thirimbi}}
 * Polish: {{t+|pl|gwizdek|m}}
 * Portuguese: {{t-|pt|apito|m}}
