--- a/en/b/bend.6792.wikitext
+++ b/en/b/bend.6792.wikitext
@@ -199,7 +199,7 @@ From {{etyl|enm|en}} {{term|benden|lang=enm}}, from {{etyl|ang|en}} {{term|benda
 * German: {{t+|de|Kurve|f}}
 * Greek: {{t+|el|στροφή|f|tr=strofi|sc=Grek}}
 {{trans-mid}}
-* Maori: {{t|mi|hawe}} {{qualifier|in a track, road, or river}}
+* Maori: {{t|mi|hawe}} {{qualifier|in a track, road, or river}}, {{t|mi|hawhe}} {{qualifier|in a fenceline}}, {{t|mi|whawhe}} {{qualifier|in a fenceline}}
 * Ngarrindjeri: {{tø|nay|tagalang}}
 * Portuguese: {{t+|pt|curva|f}}
 * Scottish Gaelic: {{t-|gd|bogha|f}},  {{t-|gd|lùb|f}},  {{t-|gd|bogha|m}}
