--- a/en/a/at.3964.wikitext
+++ b/en/a/at.3964.wikitext
@@ -364,8 +364,11 @@ From {{etyl|sga|ga}} {{term|att|lang=sga}}.
 * [[sed]]
 * [[tamen]] {{postpositive}}
 
-====Derived terms====
-* [[atque]]
+<!-- It seems that "atque" is actually from "ad+que".
+See this link: http://www.jstor.org/stable/40266508?seq=1
+and the following page.
+ ====Derived terms====
+* [[atque]]-->
 
 [[Category:Latin conjunctions]]
 
