t+ca:[[després]] t+ca:[[llavors]] t-balance t+ca:[[mentrestant]] t+ca:[[al mateix temps]] ([[WT:EDIT|Assisted]]) <then#20728049>

--- a/en/t/then.7353.wikitext
+++ b/en/t/then.7353.wikitext
@@ -108,6 +108,7 @@ From {{etyl|enm|en}} {{term|then|then(ne)|lang=enm}}, {{term|than|than(ne)|lang=
 * Arabic: {{t-|ar|ثم|tr=ṯúmma|sc=Arab}}
 * Armenian: {{t-|hy|հետո|tr=heto|sc=Armn}}
 * Belarusian: {{t-|be|затым|tr=zatým|sc=Cyrl}}
+* Catalan: {{t|ca|després}}, {{t|ca|llavors}}
 * Chinese:
 *: Mandarin: {{t|cmn|接著|sc=Hani}}, {{t|cmn|接着|tr=jiēzhe|sc=Hani}}
 * Czech: {{t+|cs|pak}}, {{t+|cs|potom}}
@@ -159,6 +160,7 @@ From {{etyl|enm|en}} {{term|then|then(ne)|lang=enm}}, {{term|than|than(ne)|lang=
 * Arabic: {{t-|ar|ثم|tr=ṯúmma|sc=Arab}}
 * Armenian: {{t-|hy|հետո|tr=heto|sc=Armn}}
 * Bengali: {{t-|bn|এরপর|tr=erpôr|sc=Beng}}, {{t-|bn|তারপর|tr=tarpôr|sc=Beng}}
+* Catalan: {{t|ca|després}}
 * Chinese:
 *: Mandarin: {{t|cmn|接著|sc=Hani}}, {{t|cmn|接着|tr=jiēzhe|sc=Hani}}, {{t|cmn|然後|sc=Hani}}, {{t|cmn|然后|tr=ránhòu|sc=Hani}}, {{t|cmn|就|tr=jiù|sc=Hani}}
 * Czech: {{t+|cs|pak}}, {{t+|cs|potom}}
@@ -193,6 +195,7 @@ From {{etyl|enm|en}} {{term|then|then(ne)|lang=enm}}, {{term|than|than(ne)|lang=
 * Arabic: {{t-|ar|ثم|tr=ṯúmma|sc=Arab}}
 * Armenian: {{t-|hy|ուրեմն|tr=uremn|sc=Armn}}
 * Belarusian: {{t-|be|тады|tr=tadý|sc=Cyrl}}
+* Catalan: {{t|ca|llavors}}
 * Chinese:
 *: Mandarin: {{t|cmn|那麼|sc=Hani}}, {{t|cmn|那么|tr=nàme|sc=Hani}}, {{t|cmn|便|tr=biàn|sc=Hani}}
 * Czech: {{t+|cs|pak}}, {{t+|cs|potom}}
@@ -208,8 +211,8 @@ From {{etyl|enm|en}} {{term|then|then(ne)|lang=enm}}, {{term|than|than(ne)|lang=
 * Japanese: {{t-|ja|そのとき|tr=sonotoki}}, {{t+|ja|だから|tr=dakara}}
 * Khmer: {{t+|km|ដូច្នេះ|tr=doochneh|sc=Khmr}}, {{t-|km|អញ្ចឹង|tr=ɑñchəng|sc=Khmr}}
 * Korean: {{t+|ko|그러면|tr=geureomyeon|sc=Kore}}
-* Kurdish: {{t+|ku|pa}}, {{t+|ku|de}}, {{t+|ku|madem}}
 {{trans-mid}}
+* Kurdish: {{t+|ku|pa}}, {{t+|ku|de}}, {{t+|ku|madem}}
 * Latin: {{t+|la|tunc}}, {{t+|la|tum}}
 * Lithuanian: {{t-|lt|tada}}
 * Malay: [[oleh sebab yang demikian]]
@@ -231,6 +234,7 @@ From {{etyl|enm|en}} {{term|then|then(ne)|lang=enm}}, {{term|than|than(ne)|lang=
 {{trans-bottom}}
 
 {{trans-top|at the same time; on the other hand}}
+* Catalan: {{t|ca|mentrestant}}, {{t|ca|al mateix temps}}
 * Dutch: {{t+|nl|trouwens}}
 * Esperanto: {{t-|eo|tamen}}
 * Finnish: {{t+|fi|toisaalta}}
