Reverted edits by [[Special:Contributions/128.135.155.124|128.135.155.124]]. If you think this rollback is in error, please leave a message on my talkpage. <at#20728254>

--- a/en/a/at.3964.wikitext
+++ b/en/a/at.3964.wikitext
@@ -364,11 +364,8 @@ From {{etyl|sga|ga}} {{term|att|lang=sga}}.
 * [[sed]]
 * [[tamen]] {{postpositive}}
 
-<!-- It seems that "atque" is actually from "ad+que".
-See this link: http://www.jstor.org/stable/40266508?seq=1
-and the following page.
- ====Derived terms====
-* [[atque]]-->
+====Derived terms====
+* [[atque]]
 
 [[Category:Latin conjunctions]]
 
