--- a/en/p/pig.8244.wikitext
+++ b/en/p/pig.8244.wikitext
@@ -16,7 +16,7 @@ British slang sense "police officer" from ''ante'' 1785.<ref>'''2003''', Victori
 [[Image:Sow with piglet.jpg|thumb|right|250px|Domestic pigs (''Sus scrofa domestica'')]]
 {{en-noun}}
 
-# A [[mammal]] of the genus ''[[Sus]]'', having [[cloven]] [[hooves]], [[bristle]]s and a [[nose]] adapted for [[digging]]; especially the [[domesticated]] [[farm]] [[animal]] ''[[Sus scrofa]]''.
+# Any of several [[mammalian]] species of the genus ''[[Sus]]'', having [[cloven]] [[hooves]], [[bristle]]s and a [[nose]] adapted for [[digging]]; especially the [[domesticated]] [[farm]] [[animal]] ''[[Sus scrofa]]''.
 #: ''The farmer kept a pen with two '''pigs''' that he fed from table scraps and field waste.''
 # (''specifically'') A young swine, a [[piglet]].
 # {{context|uncountable}} The [[edible]] [[meat]] of such an animal; [[pork]].
