fixing links <byke#20826200>

--- a/en/b/byke.720312.wikitext
+++ b/en/b/byke.720312.wikitext
@@ -21,8 +21,8 @@ Etymology unknown. Cognate with Northern {{etyl|enm|sco}} {{term|bike|lang=enm}}
 ===Noun===
 {{sco-noun}}
 
-# A {{term|beehive|lang=en}} or {{term|anthill|lang=en}}.
-# A {{term|home|lang=en}}, a {{term|dwelling|lang=en}}.
+# A {{l|en|beehive}} or {{l|en|anthill}}.
+# A {{l|en|home}}, a {{l|en|dwelling}}.
 # {{context|figurative}} A swarm, usually of people.
 
 
