/* Alternative forms */ <byke#20826547>

--- a/en/b/byke.720312.wikitext
+++ b/en/b/byke.720312.wikitext
@@ -9,7 +9,7 @@
 ==Scots==
 
 ===Alternative forms===
-* {{l|sco|bike}}, {{l|sco|byk}}, {{l|sco|byik}}
+* {{l|sco|bike}}, {{l|sco|byk}}, {{l|sco|byik}}, {{l|sco|bink}}
 
 ===Etymology===
 Etymology unknown. Cognate with Northern {{etyl|enm|sco}} {{term|bike|lang=enm}}; ''cf.'' {{etyl|en|sco}} {{term|bike|lang=en}}.
