/* Translingual */changed from "Translingual" to "English" instead - better? <Olympus Mons#20833179>

--- a/en/o/Olympus Mons.854983.wikitext
+++ b/en/o/Olympus Mons.854983.wikitext
@@ -1,4 +1,4 @@
-==Translingual==
+==English==
 
 ===Etymology===
 Named in 1973 after the [[albedo feature]] {{term|Nix Olympica||Snows of Olympus}}.
