--- a/en/s/seize.26061.wikitext
+++ b/en/s/seize.26061.wikitext
@@ -65,6 +65,7 @@ Earlier {{term|seise|lang=en}}, from {{etyl|enm|en}} {{term|seisen|lang=enm}}, {
 * Japanese: {{t-|ja|捉える|tr=とらえる, toraeru}}, {{t+|ja|つかむ|tr=tsukamu}}
 * Korean: [[붙잡다]] (butjapda)
 * Latin: {{t-|la|capere}}, {{t-|la|possideo}}
+* North Frisian: {{tø|frr|gripe}}
 * Norwegian: {{t-|no|gripe}}
 * Old English: {{t-|ang|niman}}
 * Old Portuguese: {{tø|roa-ptg|tomar}}
