--- a/en/a/attend.7359.wikitext
+++ b/en/a/attend.7359.wikitext
@@ -26,7 +26,7 @@ From {{etyl|enm|en}} {{term|attenden|lang=enm}}, {{term|atenden|lang=enm}}, from
 # {{context|archaic|intransitive}} To [[listen]] ({{term|to}}, {{term|unto}}). {{defdate|from 15th c.}}
 # {{context|intransitive}} To turn one's [[consideration]] ({{term|to}}); to [[deal]] with (a task, problem, concern etc.), to look after. {{defdate|from 15th c.}}
 # {{context|transitive}} To [[wait upon]] as a [[servant]] etc.; to accompany to assist (someone). {{defdate|from 15th c.}}
-# {{context|transitive}} To be [[present]] at (an event or place) in order to take part in some action or proceedings. {{defdate|from 17th c.}}
+#{{senseid|en|to be present at}} {{context|transitive}} To be [[present]] at (an event or place) in order to take part in some action or proceedings. {{defdate|from 17th c.}}
 #* '''1994''', Nelson Mandela, ''Long Walk to Freedom'', Abacus 2010, p. 20:
 #*: I '''attended''' a one-room school next door to the palace and studied English, Xhosa, history and geography.
 
