--- a/en/p/pig.8244.wikitext
+++ b/en/p/pig.8244.wikitext
@@ -121,7 +121,7 @@ British slang sense "police officer" from ''ante'' 1785.<ref>'''2003''', Victori
 * Armenian: {{t-|hy|խոզ|tr=xoz}}
 * Aromanian: {{t-|rup|porcu|m}}
 * Asturian: {{t+|ast|gochu|m}}, {{t-|ast|gocha|f}}
-* {{trreq|av}}
+* Avar: {{t|av|болъон|sc=Cyrl}}
 * Azeri: {{t+|az|donuz}}
 * Basque: {{t+|eu|urde}}, {{t+|eu|zerri}}, {{t+|eu|txerri}}
 * Belarusian: {{t-|be|свіння|f|tr=svinnjá}}
@@ -186,10 +186,10 @@ British slang sense "police officer" from ''ante'' 1785.<ref>'''2003''', Victori
 * Kyrgyz: {{t-|ky|чочко|tr=çoçko|sc=Cyrl}}
 * Ladin: {{tø|lld|porcel}}
 * Lao: {{t+|lo|ໝູ|tr=mŭː|sc=Laoo}}
+{{trans-mid}}
 * Latgalian: {{tø|ltg|cyuka|f}}
 * Latin: {{t+|la|sus|c}}, {{t+|la|porcus|m}}<!--do not put the scientific name here-->
 * Latvian: {{t+|lv|cūka|f}}
-{{trans-mid}}
 * Lithuanian: {{t+|lt|kiaulė|f}}
 * Lower Sorbian: {{tø|dsb|swinja|f}}
 * Luganda: {{tø|lg|embizzi}}
