t+mi:[[turupou]] ([[WT:EDIT|Assisted]]) <staff#20873800>

--- a/en/s/staff.34070.wikitext
+++ b/en/s/staff.34070.wikitext
@@ -62,6 +62,7 @@
 * Latin: {{t-|la|baculum}}
 * Macedonian: {{t-|mk|стап|m|tr=stap}}
 * Malagasy: {{t|mg|langilangy}}, {{t|mg|tehina}}
+* Maori: {{t|mi|turupou}}
 * Polish: {{t+|pl|laska|f}}, {{t+|pl|kij|m}}
 * Portuguese: {{t+|pt|cajado|m}}
 * Russian: {{t+|ru|посох|m|tr=pósox}}
