--- a/en/s/sabre-toothed tiger.801837.wikitext
+++ b/en/s/sabre-toothed tiger.801837.wikitext
@@ -7,7 +7,7 @@
 ===Noun===
 {{en-noun|head=[[sabre-toothed]] [[tiger]]}}
 
-# Any of numerous [[species]] of [[prehistoric]] cat-like [[mammals]]. A cat of the ''[[Machairodontinae]]'' subfamily of the ''[[Felidae]]''.
+# Any of numerous [[species]] of [[prehistoric]] cat-like [[mammals]]. A cat of the ''{{taxlink|Machairodontinae|subfamily}}'' subfamily of the [[Felidae]].
 
 ====Synonyms====
 * [[sabrecat]] / [[sabercat]]
