--- a/en/b/bare-bum.741634.wikitext
+++ b/en/b/bare-bum.741634.wikitext
@@ -1,7 +1,7 @@
 ==English==
 
 ===Alternative forms===
-*[[barebum]]
+* [[barebum]]
 
 ===Etymology===
 [[bare]] naked + [[bum]] bottom, butt.
@@ -9,14 +9,14 @@
 ===Adjective===
 {{en-adj|-}}
 
-# {{context|literal}} With the [[bum]] (bottom) [[exposed]], as for a [[spanking]] or a [[mooning]].
-# {{context|by extension}} [[stark naked|Stark naked]].
+# {{context|literally}} With the [[bum]] (bottom) [[exposed]], as for a [[spanking]] or a [[mooning]].
+# {{context|by extension}} [[stark|Stark]] [[naked]].
 #* '''1992''', Louise Leblanc, ''Maddie in Goal'' (trans. Sarah Cummins), Formac (1992; original French book published 1991), ISBN 0887802028, [http://books.google.com/books?id=KGvePN7CaesC&pg=PA12 page 12]:
 #*: "Of course I do, Gran! Julian is always walking around '''bare-bum'''. I know all about boys and girls. And love and babies and all."
 #* '''1992''', Martie Sterling, "[http://books.google.com/books?id=akLBQQoiPnQC&pg=PA84&dq=%22bare-bum My Last, Last Run]", ''Ski'', April 1992:
 #*: Having never experienced communal '''bare-bum''' soaking European style, I was sure I'd wandered into the men's room.
 #* '''2009''', John B. Duffield, ''A Cry for Help'', ISBN 9780578028231, [http://books.google.com/books?id=v3NvAEmGFLMC&pg=PA21 page 21]:
-#*: We discovered trout and bears and foxes. And bees{{sic}} nests! Not to mention how to swim '''bare-bum''' down rocky falls.
+#*: We discovered trout and bears and foxes. And bees{{SIC}} nests! Not to mention how to swim '''bare-bum''' down rocky falls.
 
 ====Synonyms====
 * [[bare-arse]]
