/* Derived terms */ [[Balkanism]] <Balkans#20995976>

--- a/en/b/Balkans.741828.wikitext
+++ b/en/b/Balkans.741828.wikitext
@@ -24,6 +24,7 @@ Used with the definite article {{term|the}}.
 
 ====Derived terms====
 * [[Balkan]]
+* [[Balkanism]]
 * [[Balkanize]]
 
 ====Translations====
