--- a/en/b/badger.8231.wikitext
+++ b/en/b/badger.8231.wikitext
@@ -157,7 +157,7 @@ From {{etyl|enm|en}} {{term|bageard||marked by a badge|lang=enm}}, from {{term|b
 {{trans-see|fart}}
 
 ===Etymology 2===
-{{unk.}}
+{{unk.}} ''(Possibly from "[[bagger]]".  "[[baggi|Baggier]]" is cited by the OED in 1467-8)
 
 ====Noun====
 {{en-noun}}
