--- a/en/q/qua.4315.wikitext
+++ b/en/q/qua.4315.wikitext
@@ -130,7 +130,7 @@ To ask for an object, use ''[[quan]]'' instead.
 #: ''ens qua ens'' ("being as being")
 
 ===Etymology 2===
-Inflection of {{term|qui|quī|who, which|lang=la}}: Sanskrit {{term|किस्|tr=kis|lang=sa|pos=interrogative particle}}; Ancient Greek {{term|τίς|lang=grc}}.
+Inflection of {{term|qui|quī|who, which|lang=la}}: Sanskrit {{term|किस्|tr=kis|lang=sa|pos=interrogative particle}}, {{term|कः|tr=kah|lang=sa||who}}; Ancient Greek {{term|τίς|lang=grc}}.
 
 ====Pronoun====
 {{la-pronoun-form|quā}}
