--- a/en/b/bet.6795.wikitext
+++ b/en/b/bet.6795.wikitext
@@ -342,6 +342,19 @@ From {{etyl|gem-pro|ang}} {{recons|batiz|lang=gem-pro}}.
 
 ----
 
+==Old Saxon==
+
+===Etymology===
+From {{etyl|gem-pro|osx}} {{recons|batiz|lang=gem-pro}}.
+
+===Adverb===
+{{head|osx|adverb}}
+
+# [[better]]
+# [[rather]]
+
+----
+
 ==Spanish==
 
 ===Noun===
