--- a/en/b/bent.6793.wikitext
+++ b/en/b/bent.6793.wikitext
@@ -157,6 +157,9 @@ See also verb form {{term|bennen|lang=nl}}.
 ====Synonyms====
 * [[benn]]
 
+====Antonyms====
+* [[kinn]], [[kint]]
+
 ----
 
 ==Scots==
