--- a/en/-/-um.34068.wikitext
+++ b/en/-/-um.34068.wikitext
@@ -149,12 +149,13 @@ The suffix to be used is determined by [[w:vowel harmony|vowel harmony]]. If the
 ----
 ==Icelandic==
 ===Suffix===
-{{head|is|suffix|cat=suffixes|sort=um}}
+{{head|is|suffix|cat2=inflectional suffixes|sort=um}}
 # Used to form the dative plural of most nouns, all strong adjectives and most pronouns.
 #: ''[[hestur]] → [[hestur|hest'''um''']]'' — a [[horse]] → of the horses
 #: ''[[ríkur]] → [[ríkur|rík'''um''']]'' —  [[rich]] → of the rich
 # Used to form the first person plural of verbs in the indicative and subjunctive, past and present..
 ----
+
 ==Old Irish==
 
 ===Pronunciation===
