t+ca:[[tort]] ([[WT:EDIT|Assisted]]) <bent#21095721>

--- a/en/b/bent.6793.wikitext
+++ b/en/b/bent.6793.wikitext
@@ -42,6 +42,7 @@ From {{term|bend|lang=en}}.
 =====Translations=====
 {{trans-top|folded}}
 * Bulgarian: {{t+|bg|огънат}}
+* Catalan: {{t|ca|tort}}
 * Dutch: {{t+|nl|gebogen}}
 * Finnish: {{t-|fi|taipunut}}, {{t-|fi|taittunut}}
 * French: {{t+|fr|courbé}}
