/* Noun */ fix link <summer stock#21102838>

--- a/en/s/summer stock.801746.wikitext
+++ b/en/s/summer stock.801746.wikitext
@@ -2,7 +2,7 @@
 ===Noun===
 {{en-noun|head=[[summer]] [[stock]]|-}}
 
-# {{context|US}} [[play|Plays]] put on at [[theater]]s during the summer, especially outdoors and during the [[summer vacation]].
+# {{context|US}} [[play|Plays]] put on at [[theater]]s during the summer, especially outdoors and during the [[summer]] [[vacation]].
 
 ====Derived terms====
 * [[summer stock theater]], [[summer stock theatre]]
