--- a/en/q/quadrate.802550.wikitext
+++ b/en/q/quadrate.802550.wikitext
@@ -32,9 +32,12 @@ From {{etyl|fro|en}} {{term|lang=fro|quadrat||a square}}, from {{etyl|la|en}} {{
 
 # {{context|archaic|transitive}} To [[adjust]] (a [[gun]]) on its [[carriage]].
 # {{context|archaic|transitive}} To [[train]] (a [[gun]]) for [[horizontal]] [[fire|firing]].
-# {{context|archaic|ambitransitive}} To [[square]] (in various senses).
+# {{context|archaic|ambitransitive}} To [[square]].
 #: '''''quadrating''' the circle''
+# {{context|archaic|transitive}} To square; to agree; to suit; to correspond (with).
 #: ''not '''quadrating''' with American ideas of right, justice and reason''
+#* Burke
+#*: The objections of these speculatists of its forms do not '''quadrate''' with their theories.
 
 ===External links===
 * {{R:Webster 1913}}
