--- a/en/v/vortical.855979.wikitext
+++ b/en/v/vortical.855979.wikitext
@@ -33,6 +33,7 @@ From (the stem of) {{etyl|la|en}} {{term|vortex|lang=la}} {{suffix||al}}.
 * Italian: {{t-|it|vorticoso}}
 * {{trreq|ja}}
 * {{trreq|ko}}
+* Polish: {{t|pl|wirowy|m}}
 * Portuguese: {{t+|pt|vortiginoso}}
 * Russian: {{t+|ru|вихревой}}, {{t+|ru|вращательный|sc=Cyrl}}
 * {{trreq|es}}
