--- a/en/l/land of opportunity.856422.wikitext
+++ b/en/l/land of opportunity.856422.wikitext
@@ -4,6 +4,10 @@
 {{head|en|noun}}
 
 # {{context|idiomatic}} A nickname for the [[United States]].
-#: ''They say America is the '''land of opportunity'''. Opportunity for what? For children to run in the dirty streets?'' - Mr Mousekewitz in ''{{w|An American Tail: Fievel Goes West}}''
+#* ''They say America is the '''land of opportunity'''. Opportunity for what? For children to run in the dirty streets?'' - Mr Mousekewitz in ''{{w|An American Tail: Fievel Goes West}}''
+#*{{quote-magazine|date=2013-07-06|author={{w|Joseph Stiglitz}}
+|volume=188|issue=26|page=19|magazine={{w|The Guardian Weekly}}
+|title=[http://www.guardian.co.uk/commentisfree/2013/may/27/globalisation-is-about-taxes-too Globalisation is about taxes too]
+|passage=It is time the international community faced the reality: we have an unmanageable, unfair, distortionary global tax regime. [&hellip;] It is the starving of the public sector which has been pivotal in America no longer being the '''land of opportunity''' – with a child's life prospects more dependent on the income and education of its parents than in other advanced countries.}}
 
 [[Category:en:United States of America]]
