t+it:[[putrefarsi]] ([[WT:EDIT|Assisted]]) <rot#21153621>

--- a/en/r/rot.26064.wikitext
+++ b/en/r/rot.26064.wikitext
@@ -39,7 +39,7 @@ From {{etyl|enm|en}} {{term|rotten|lang=enm}}, {{term|roten|lang=enm}}, from {{e
 * Greek: {{t+|el|σαπίζω|tr=sapízo}}
 {{trans-mid}}
 * Hungarian: {{t+|hu|rohad}}, {{t-|hu|rothad}}
-* Italian: {{t+|it|marcire}}
+* Italian: {{t+|it|marcire}}, {{t|it|putrefarsi}}
 * Japanese: {{t-|ja|腐る|tr=くさる, kusaru|sc=Jpan}}
 * Korean: {{t+|ko|썩다|tr=sseokda|sc=Kore}}, {{t-|ko|부패하아|tr=bupae-hada|sc=Kore}}
 * Latgalian: {{tø|ltg|pyut}}, {{tø|ltg|trupēt}}
