--- a/en/i/island.4316.wikitext
+++ b/en/i/island.4316.wikitext
@@ -24,6 +24,7 @@ From earlier {{term|iland|lang=en}}, from {{etyl|enm|en}} {{term|iland|lang=enm}
 #*: Sumatra is the second largest '''island''' in the East Indies and the fourth largest in the world covering 182,859 square miles.
 # An [[entity]] [[surround]]ed by other entities that are very [[different]] from itself.
 #: ''an '''island''' of tranquility'' (a calm place surrounded by a noisy environment)
+#: ''an '''island''' of colour on a butterfly's wing''
 #* '''1939''', Deseret News, October 27 1939, ''Roosevelt Reaffirms American Neutrality''
 #*: King Leopold, speaking in fluent English during his six minute broadcast, said Belgium stood side by side with Holland "an '''Island''' of peace in the interests of all"
 # A [[superstructure]] on an aircraft carrier's [[deck]]
