--- a/en/-/-um.34068.wikitext
+++ b/en/-/-um.34068.wikitext
@@ -153,7 +153,12 @@ The suffix to be used is determined by [[w:vowel harmony|vowel harmony]]. If the
 # Used to form the dative plural of most nouns, all strong adjectives and most pronouns.
 #: ''[[hestur]] → [[hestur|hest'''um''']]'' — a [[horse]] → of the horses
 #: ''[[ríkur]] → [[ríkur|rík'''um''']]'' —  [[rich]] → of the rich
-# Used to form the first person plural of verbs in the indicative and subjunctive, past and present..
+# Used to form the first person plural of verbs in the indicative and subjunctive, past and present.
+#* [[telja]] (infinitive) → ''við'' '''teljum''' (''we'' [[count]] or [[believe]]) ([[indicative]])
+#* ''við'' '''teldum''' [[subjunctive]] [[past]] [[tense]], i.e., ''we would believe''
+# Used to form some [[adverbs]] from nouns or adjectives — it is actually a frozen [[dative]]
+#* [[stund]] ([[time]], [[hour]] → [[stundum]] — sometimes
+#* [[langur]] ([[long]])  → [[löngum]] ([[oftentimes]]).
 ----
 
 ==Old Irish==
