--- a/en/d/dacryohemorrhea.746510.wikitext
+++ b/en/d/dacryohemorrhea.746510.wikitext
@@ -1,7 +1,7 @@
 ==English==
 
 ===Etymology===
-From Greek [[δακρυοαιμορρεειν]] (''dakryohaimorrheein'') to flow tears of blood: ''dakryo-'', "tear" + ''haima'', "blood" + ''rheein'', "to flow".
+From Greek [[δακρυοαιμορρεειν]] (''dakryohaimorrheein'') to flow tears of blood: ''dakryo-'', "tear" + ''haima'', "blood" + ''rheein'', "to flow" (or {{prefix|dacry}} {{term|-o-|lang=en}} + {{term|hemorrhea|lang=en}}).
 
 ===Pronunciation===
 * {{a|UK}} {{IPA|/ˌdækɹɪəʊheməˈɹɪə/}}
