--- a/en/q/quadrate.802550.wikitext
+++ b/en/q/quadrate.802550.wikitext
@@ -23,11 +23,12 @@ From {{etyl|fro|en}} {{term|lang=fro|quadrat||a square}}, from {{etyl|la|en}} {{
 ===Noun===
 {{en-noun}}
 
-# {{context|geometry|lang=en}} A plane surface with four equal sides and four right angles; a square; hence, figuratively, anything having the outline of a square.
-#* Milton
-#*: At which command, the powers militant / That stood for heaven, in mighty '''quadrate''' joined.
-# {{context|astrology|lang=en}} An aspect of the heavenly bodies in which they are distant from each other 90°, or the quarter of a circle; quartile.
-# {{context|anatomy|lang=en}} The quadrate bone.
+# {{context|geometry|lang=en}} A [[plane]] [[surface]] with four equal sides and four right angles; a [[square]]; hence, figuratively, anything having the outline of a square.
+#* '''1667''', [[w:John Milton|John Milton]], ''Paradise Lost'', Book VI:
+#*: At which command, the powers militant
+#*: That stood for heaven, in mighty '''quadrate''' joined.
+# {{context|astrology|lang=en}} An aspect of the [[heavenly body|heavenly bodies]] in which they are distant from each other 90°, or the quarter of a circle; [[quartile]].
+# {{context|anatomy|lang=en}} The [[quadrate bone]].
 
 ===Verb===
 {{en-verb|quadrat|ing}}
