--- a/en/q/quadrate.802550.wikitext
+++ b/en/q/quadrate.802550.wikitext
@@ -11,8 +11,8 @@ From {{etyl|fro|en}} {{term|lang=fro|quadrat||a square}}, from {{etyl|la|en}} {{
 #* Foxe
 #*: Figures, some round, some triangle, some '''quadrate'''.
 # Produced by multiplying a number by itself; [[square]].
-#* Sir Thomas Browne
-#*: '''Quadrate''' and cubical numbers.
+#* '''1646-72''', [[w:Sir Thomas Browne|Sir Thomas Browne]], ''Pseudodoxia Epidemica'', book 4, ch. 12:
+#*: The number of Ten hath been as highly extolled, as containing even, odd, long, plain, '''quadrate''' and cubical numbers.
 # {{context|archaic|lang=en}} Square; even; balanced; equal; exact.
 #* Howell
 #*: A '''quadrate''', solid, wise man.
