Reverted edits by [[Special:Contributions/109.211.210.7|109.211.210.7]]. If you think this rollback is in error, please leave a message on my talkpage. <rabbit#21276854>

--- a/en/r/rabbit.8241.wikitext
+++ b/en/r/rabbit.8241.wikitext
@@ -73,7 +73,7 @@ From {{etyl|enm|en}} {{term|rabet|lang=enm}}, from {{etyl|frm|en}} dialect (comp
 * Dena'ina: {{tø|tfn|hvaya}}
 * Dutch: {{t+|nl|konijn|n}}
 * {{trreq|aer}}
-* Esperanto: {{qualifier|♂}} {{t-|eo|kuniklo}}, {{qualifier|♀}} {{t-|eo|kuniklino}}
+* Esperanto: {{qualifier|♂♀}} {{t-|eo|kuniklo}}, {{qualifier|♂}} {{t-|eo|virkuniklo}}, {{qualifier|neologism ♂}} {{t-|eo|kunikliĉo}},{{qualifier|♀}} {{t-|eo|kuniklino}}, {{qualifier|♂♀ offspring}} {{t-|eo|kuniklido}}, {{qualifier|diminutive ♂♀}} {{t-|eo|kunikleto}}
 * Estonian: {{t-|et|küülik}}
 * Ewe: {{tø|ee|fɔmizi}}
 * Faroese: {{t-|fo|kanin}}
