--- a/en/e/even so.742278.wikitext
+++ b/en/e/even so.742278.wikitext
@@ -13,7 +13,7 @@
 * Hebrew: {{t-|he|בכל זאת|tr=bekhol zot|alt=בְּכָל זֹאת|sc=Hebr}}
 {{trans-mid}}
 * Mandarin: {{t|cmn|即使这样|sc=Hani}}
-* Russian: {{t-|ru|несмотря на это|sc=Cyrl}}
+* Russian: {{t-|ru|несмотря на это|tr=nesmotrjá na éto|sc=Cyrl}}
 * Spanish: {{t-|es|aún así}}
 {{trans-bottom}}
 
