#* Shakespeare  #*: '''Crook''' the pregnant hinges of the knee.  # To turn from the path of rectitude; to pervert; to misapply; to twist.  #* Ascham  #*: There is no one thing that '''crooks''' youth more than such unlawful games.  #* Francis Bacon  #*: <crook#21280918>

--- a/en/c/crook.34069.wikitext
+++ b/en/c/crook.34069.wikitext
@@ -82,8 +82,15 @@ From {{etyl|enm|en}} {{term|croke|lang=enm}}, {{term|crok|lang=enm}}, from {{ety
 
 # {{context|transitive|lang=en}} To [[bend]].
 #: ''He '''crooked''' his finger toward me.''
+#* Shakespeare
+#*: '''Crook''' the pregnant hinges of the knee.
 #* '''1917''', [[w:Leo Tolstoy|Leo Tolstoy]], [[w:Constance Garnett|Constance Garnett]] (translator)''[[s:Anna Karenina|Anna Karenina]]'', Part 4, Chapter 5,
 #*: “{{...}}In the following cases: physical defect in the married parties, desertion without communication for five years,” he said, '''crooking''' a short finger covered with hair{{...}}.
+# To turn from the path of rectitude; to pervert; to misapply; to twist.
+#* Ascham
+#*: There is no one thing that '''crooks''' youth more than such unlawful games.
+#* Francis Bacon
+#*: Whatsoever affairs pass such a man's hands, he '''crooketh''' them to his own ends.
 
 =====Derived terms=====
 * [[crooked]] {{qualifier|adjective}}
