--- a/en/t/thing.7362.wikitext
+++ b/en/t/thing.7362.wikitext
@@ -8,6 +8,7 @@ From {{etyl|enm|en}}, from {{etyl|ang|en}} {{term|þing|lang=ang||tr=thing}}, fr
 ===Pronunciation===
 * {{enPR|thĭng}}, {{IPA|/θɪŋ/}}, {{X-SAMPA|/TIN/}}
 * {{audio|en-us-thing.ogg|Audio (US)}}
+* {{context|also}} {{a|US}} {{enPR|thēng}}, {{IPA|/θiːŋ/}}, {{X-SAMPA|/Ti:N/}}
 * {{rhymes|ɪŋ}}
 
 ===Noun===
