--- a/en/-/-um.34068.wikitext
+++ b/en/-/-um.34068.wikitext
@@ -167,7 +167,7 @@ The suffix to be used is determined by [[w:vowel harmony|vowel harmony]]. If the
 * {{IPA|/um/|lang=sga}}
 
 ===Suffix===
-{{head|sga|suffix|[[Appendix:Old Irish affixed pronouns|suffixed pronoun]]}}
+{{head|sga|suffix|[[Appendix:Old Irish affixed pronouns|suffixed pronoun]]|sort=um}}
 
 # [[me]]
 
@@ -181,6 +181,7 @@ The suffix to be used is determined by [[w:vowel harmony|vowel harmony]]. If the
 [[Category:Old Irish pronouns]]
 
 ----
+
 ==Pijin==
 
 ===Alternative forms===
