--- a/en/m/multi-million.34079.wikitext
+++ b/en/m/multi-million.34079.wikitext
@@ -1,9 +1,7 @@
 ==English==
 
 ===Pronunciation===
-{{rfp|lang=en}}
-<!--'''mul*ti-mil*li-on'''
-MOHL-tee-MIL-li-hun-->
+* {{a|US}} {{IPA|/ˌmʌltiˈmɪljən/|/ˌmʌltaɪˈmɪljən/}}
 
 ===Etymology===
 From {{prefix|multi|million}}.
@@ -18,7 +16,7 @@ From {{prefix|multi|million}}.
 * French: {{t+|fr|multi-million}}
 * Italian: {{t-|it|multi-millione}}
 {{trans-mid}}
-* [[Manx]]: {{t-|gv|yl-villioonagh}}
+* Manx: {{t-|gv|yl-villioonagh}}
 {{trans-bottom}}
 
 [[fr:multi-million]]
