--- a/en/s/simple.7363.wikitext
+++ b/en/s/simple.7363.wikitext
@@ -245,7 +245,15 @@ From {{etyl|enm|en}} {{term|simple|lang=enm}}, from {{etyl|fro|en}} and {{etyl|f
 # {{context|medicine|lang=en}} A preparation made from one plant, as opposed to something made from more than one plant.
 #* '''1603''', {{w|John Florio}}, translating Michel de Montaigne, ''Essays'', II.37:
 #*: I know there are some '''simples''', which in operation are moistning and some drying.
-# {{context|logic|lang=en}} A simple or atomic [[proposition]]
+#* Sir W. Temple
+#*: What virtue is in this remedy lies in the naked '''simple''' itself as it comes over from the Indies.
+# {{context|logic|lang=en}} A simple or atomic [[proposition]].
+# {{context|obsolete|lang=en}} Something not mixed or compounded.
+#* Shakespeare
+#*: compounded of many '''simples'''
+# {{context|weaving|lang=en}} A [[drawloom]].
+# {{context|weaving|lang=en}} Part of the [[apparatus]] for raising the [[heddle]]s of a [[drawloom]].
+# {{context|Roman Catholic|lang=en}} A [[feast]] which is not a [[double]] or a [[semidouble]].
 
 ====Translations====
 {{trans-top|preparation from one plant}}
