--- a/en/b/bend.6792.wikitext
+++ b/en/b/bend.6792.wikitext
@@ -6,7 +6,8 @@
 From {{etyl|enm|en}} {{term|benden|lang=enm}}, from {{etyl|ang|en}} {{term|bendan||to bind or bend (a bow), fetter, restrain|lang=ang}}, from {{etyl|gem-pro|en}} {{recons|bandijaną||to bend|lang=gem-pro}}, from {{etyl|ine-pro|en}} {{recons|bʰendʰ-||to bind, tie|lang=ine-pro}}. Cognate with {{etyl|gmh|-}} {{term|benden||to fetter|lang=gmh}}, {{etyl|da|-}} {{term|bænde||to bend|lang=da}}, {{etyl|no|-}} {{term|bende||to bend|lang=no}}, {{etyl|fo|-}} {{term|benda||to bend, inflect|lang=fo}}, {{etyl|is|-}} {{term|benda||to bend|lang=is}}. More at {{l|en|band}}.
 
 ===Pronunciation===
-* {{IPA|/bɛnd/}}
+* {{enPR|ĕnd}}, {{IPA|/bɛnd/}}
+* {{a|pin-pen}} {{IPA|/bɪnd/}}
 * {{rhymes|ɛnd}}
 
 ===Verb===
@@ -53,12 +54,12 @@ From {{etyl|enm|en}} {{term|benden|lang=enm}}, from {{etyl|ang|en}} {{term|benda
 ====Translations====
 {{trans-top|to shape into a curve}}
 * Arabic: {{t-|ar|ثنى|tr=thanaa}}
-* Bulgarian: {{t+|bg|извивам}},  {{t+|bg|превивам}}
+* Bulgarian: {{t+|bg|извивам}}, {{t+|bg|превивам}}
 * Chinese:
 *: {{ttbc|cmn}}: {{t-|cmn|屈|tr=qū|sc=Hani}}, {{t-|cmn|曲|tr=qū|sc=Hani}}, {{zh-tsp|彎|弯|wān}}
 * Czech: {{t+|cs|ohnout}}
 * Dutch: {{t+|nl|buigen}}, {{t+|nl|plooien}}
-* Esperanto: {{t-|eo|kurbigi}},  {{t+|eo|fleksi}}
+* Esperanto: {{t-|eo|kurbigi}}, {{t+|eo|fleksi}}
 * Finnish: {{t+|fi|taivuttaa}}
 * French: {{t+|fr|courber}}
 * German: {{t+|de|beugen}}
@@ -70,16 +71,16 @@ From {{etyl|enm|en}} {{term|benden|lang=enm}}, from {{etyl|ang|en}} {{term|benda
 {{trans-mid}}
 * Japanese: {{t-|ja|曲げる|tr=mageru}}
 * Kurdish:
-*: Sorani: {{ku-Arab|[[چه‌ماندن]]}}
+*: Sorani: {{t|ku|چه‌ماندن}}
 * Latin: {{t-|la|sinuo|alt=sinuō}}
 * Norwegian: {{t+|no|bøye}}
 * Polish: {{t+|pl|zgiąć}}
-* Portuguese: {{t+|pt|dobrar}},  {{t+|pt|curvar}}
-* Russian: {{t+|ru|сгибать|tr=sgibát'}},  {{t+|ru|изгибать|tr=izgibát'}},  {{t+|ru|гнуть|tr=gnut'}}
+* Portuguese: {{t+|pt|dobrar}}, {{t+|pt|curvar}}
+* Russian: {{t+|ru|сгибать|tr=sgibát'}}, {{t+|ru|изгибать|tr=izgibát'}}, {{t+|ru|гнуть|tr=gnut'}}
 * Scottish Gaelic: {{t-|gd|crom}},  {{t-|gd|lùb}}
-* Slovene: [[upogniti]]
+* Slovene: {{t|sl|upogniti}}
 * Spanish: {{t+|es|doblar}}, {{t-|es|curvar}}
-* Swahili: {{t+|sw|pinda}},  {{t+|sw|kunja}}
+* Swahili: {{t+|sw|pinda}}, {{t+|sw|kunja}}
 * Swedish: {{t+|sv|böja}}
 * Turkish: {{t+|tr|bükmek}}
 * Vietnamese: {{t+|vi|uốn cong}}
@@ -92,7 +93,7 @@ From {{etyl|enm|en}} {{term|benden|lang=enm}}, from {{etyl|ang|en}} {{term|benda
 * Portuguese: {{t+|pt|obrigar}}
 * Spanish: {{t-|es|doblegar}}
 {{trans-mid}}
-* Swahili: {{t+|sw|pinda}},  {{t+|sw|kunja}}
+* Swahili: {{t+|sw|pinda}}, {{t+|sw|kunja}}
 * Swedish: {{t+|sv|kuva}}
 * Turkish: {{t+|tr|bükmek}}
 * Walloon: {{t-|wa|fé ployî}} {{qualifier|(to force)}}, {{t+|wa|ployî}} {{qualifier|(to be forced)}}
@@ -258,8 +259,8 @@ From {{etyl|ine-pro|sq}} {{recons|band|lang=ine-pro}} 'drop'. Probably connected
 ===Noun===
 {{sq-noun|g=m}}
 
-# [[a]] [[pond]], [[water]] [[reservoir]]
-# [[idle]] [[or]] [[provocative]] [[words]]
+# a [[pond]], [[water]] [[reservoir]]
+# [[idle]] or [[provocative]] [[words]]
 # [[servant]], [[henchman]]
 
 =====Related terms=====
