--- a/en/b/bet.6795.wikitext
+++ b/en/b/bet.6795.wikitext
@@ -196,7 +196,7 @@ From {{etyl|he|en}} {{term|בית|tr=béyt|lang=he}}
 ==Latvian==
 
 ===Etymology===
-From {{etyl|bat-pro|lv}} {{recons|bet|lang=bat-pro}}, from {{etyl|ine-pro|lv}} {{recons|be|lang=ine-pro}}, {{recons|bʰe||outside, without|lang=ine-pro}} (whence also {{etyl|lv|-}} preposition {{term|bez|lang=lv}}, [[q.v.]]), to which an old particle ''-t'' was added, visible also in the {{etyl|lv|-}} particle {{term|it|lang=lt}} and the adverb {{term|šeit||here|lang=lv}} ([[q.v.]]). Cognates include {{etyl|lt|-}} {{term|bet|bèt|lang=lt}}, {{etyl|xsv|-}} {{term|bat|lang=xsv}}.<ref>Karulis, Konstantīns. 1992, 2001. ''Latviešu etimoloģijas vārdnīca.'' Rīga: AVOTS. ISBN 9984700127.</ref>
+From {{etyl|bat-pro|lv}} {{recons|bet|lang=bat-pro}}, from {{etyl|ine-pro|lv}} {{recons|be|lang=ine-pro}}, {{recons|bʰe||outside, without|lang=ine-pro}} (whence also {{etyl|lv|-}} preposition {{term|bez|lang=lv}}, [[q.v.]]), to which an old particle ''-t'' was added, visible also in the {{etyl|lv|-}} particle {{term|it|lang=lt}} and the adverb {{term|šeit||here|lang=lv}} ([[q.v.]]). Cognates include {{etyl|lt|-}} {{term|bet|bèt|lang=lt}}, {{etyl|xsv|-}} {{term|bat|lang=xsv}}.<ref>{{R:lv:LEV}}</ref>
 
 ===Pronunciation===
 * {{lv-IPA|bɛt}}
@@ -248,8 +248,6 @@ From {{etyl|bat-pro|lv}} {{recons|bet|lang=bat-pro}}, from {{etyl|ine-pro|lv}} {
 
 ===References===
 <references />
-
-[[Category:Latvian etymologies from LEV]]
 
 ----
 
