t+pl:[[zdanie pojedyncze]] ([[WT:EDIT|Assisted]]) <simple sentence#21319691>

--- a/en/s/simple sentence.741362.wikitext
+++ b/en/s/simple sentence.741362.wikitext
@@ -9,6 +9,7 @@
 {{trans-top|sentence containing one independent clause and no dependent clause}}
 * Armenian: {{t-|hy|պարզ նախադասություն|tr=parz naxadasut’yun}}
 {{trans-mid}}
+* Polish: {{t|pl|zdanie pojedyncze|n}}
 * Spanish: {{t+|es|oración simple|f}}
 {{trans-bottom}}
 
