/* English */ +transtable <Ionia#21321063>

--- a/en/i/Ionia.775850.wikitext
+++ b/en/i/Ionia.775850.wikitext
@@ -9,6 +9,11 @@ From {{etyl|grc|en}} '''[[Ἰωνία]]'''.
 
 # {{context|historical|lang=en}} An Ancient Greek settlement on the west coast of [[Asia Minor]] inhabited by the [[Ionian]]s, one of the four main [[Hellenic]] tribes.
 
+====Translations====
+{{trans-top|(historical) Ancient Greek settlement}}
+{{trans-mid}}
+{{trans-bottom}}
+
 [[et:Ionia]]
 [[fr:Ionia]]
 [[io:Ionia]]
