--- a/en/s/synchrocyclotron.742248.wikitext
+++ b/en/s/synchrocyclotron.742248.wikitext
@@ -12,6 +12,16 @@ From ''[[synchro-]]'' + ''[[cyclotron]]''.
 # A [[particle accelerator]] like a [[cyclotron]], but which operates at variable frequency to account for the particles gaining energy, allowing for greater energies to be achieved.
 #* '''2004''': The '''synchrocyclotron''' was able to accelerate protons to sufficient energies that collisions with nuclei produce pions, the lightest particles that, we now know, are made from a single quark and an antiquark. — Frank Close, ''Particle Physics: A Very Short Introduction'' (Oxford 2004, p. 50)
 
+====Translations====
+{{trans-top|particle accelerator}}
+* Basque: {{t|eu|sinkroziklotroi}}
+* French: {{t+|fr|synchrocyclotron|m}}
+{{trans-mid}}
+* Polish: {{t|pl|synchrocyklotron|m}}
+* Spanish: {{t|es|sincrociclotrón|m}}
+{{trans-bottom}}
+
+[[eu:synchrocyclotron]]
 [[fr:synchrocyclotron]]
 [[ko:synchrocyclotron]]
 [[pl:synchrocyclotron]]
