--- a/en/n/NSA.26206.wikitext
+++ b/en/n/NSA.26206.wikitext
@@ -1,12 +1,12 @@
 {{also|-nsa|-nsä}}
 ==English==
 
-==={{initialism-old|en}}===
-'''NSA'''
+===Initialism===
+{{en-initialism}}
 
-# [[w:National Security Agency|National Security Agency]].
-# Not sexually active.
-# [[no strings attached|No strings attached]].
+# {{initialism of|no strings attached|No strings attached}}
+# {{initialism of|[[not]] [[sexually]] [[active]]}}
+# {{government|USA}} {{initialism of|w:National Security Agency|National Security Agency}}
 
 ===Anagrams===
 * [[ans.#English|ans.]] 
