--- a/en/m/micro.34067.wikitext
+++ b/en/m/micro.34067.wikitext
@@ -17,6 +17,8 @@
 {{en-noun}}
 
 # {{context|computing|dated|lang=en}} {{form of|short form|microcomputer|lang=en}}
+#* '''1986''', Rachael Smith, ''Bomb Jack'' (video game review) in ''Your Sinclair'' issue 5, May 1986
+#*: So what sort of hero is this bounding, bomb collecting midget? The answer is an arcade hero - and now he's let loose in your '''micro''' courtesy of conversion kings, Elite.
 
 ----
 
