--- a/en/g/guilloche.855171.wikitext
+++ b/en/g/guilloche.855171.wikitext
@@ -10,9 +10,10 @@ From {{etyl|fr|en}} {{term|guilloche|lang=fr}}.
 ===Noun===
 {{en-noun}}
 
-# A fine engraving pattern of spirals, intertwining bands, etc.; or the tool used to create such work.
+# A fine [[engrave]]d [[pattern]] of [[spiral]]s, intertwining bands, etc.
 #* '''2006''', Thomas Pynchon, ''Against the Day'', Vintage 2007, p. 1015:
 #*: A railroad right-of-way, straight across the Balkan Peninsula, conceded in Cyrillic and Arabic script all woven in and out of the loveliest green '''guilloche''' by the no-longer-quite-unabsorbed entity of East Roumelia.
+# The [[tool]] used to create such work.
 
 [[et:guilloche]]
 [[fr:guilloche]]
