t+fa:[[راسو]] ([[WT:EDIT|Assisted]]) <weasel#21341998>

--- a/en/w/weasel.8232.wikitext
+++ b/en/w/weasel.8232.wikitext
@@ -61,6 +61,7 @@ The verb comes from the supposed cunningness of the weasel.
 * Luxembourgish: {{t-|lb|Wisel|n}}
 * Macedonian: {{t-|mk|ласица|f|tr=lásica}}
 * Navajo: {{tø|nv|dlǫ́ʼii}}
+* Persian: {{t|fa|راسو|tr=rasu|sc=fa-Arab}}
 * Polish: {{t+|pl|łasica|f}}
 * Portuguese: {{t+|pt|doninha}}
 * Romanian: {{t|ro|nevăstuică|f}}
