t+mzn:[[لسک]] ([[WT:EDIT|Assisted]]) <weasel#21342077>

--- a/en/w/weasel.8232.wikitext
+++ b/en/w/weasel.8232.wikitext
@@ -60,6 +60,7 @@ The verb comes from the supposed cunningness of the weasel.
 * Lithuanian: {{t-|lt|žebenkštis|m}}
 * Luxembourgish: {{t-|lb|Wisel|n}}
 * Macedonian: {{t-|mk|ласица|f|tr=lásica}}
+* Mazanderani: {{tø|mzn|لسک|tr=lesk|sc=fa-Arab}}
 * Navajo: {{tø|nv|dlǫ́ʼii}}
 * Persian: {{t|fa|راسو|tr=râsu|sc=fa-Arab}}
 * Polish: {{t+|pl|łasica|f}}
