--- a/en/t/then.7353.wikitext
+++ b/en/t/then.7353.wikitext
@@ -14,23 +14,26 @@ From {{etyl|enm|en}} {{term|then|then(ne)|lang=enm}}, {{term|than|than(ne)|lang=
 {{en-adv|-}}
 
 # {{context|temporal location|lang=en}} At that [[time]].
-#: ''He was happy '''then'''.''
+#: {{usex|He was happy '''then'''.}}
 # {{context|temporal location|lang=en}} Soon afterward.
-#: ''He fixed it, '''then''' left.''
-#: ''Turn left, '''then''' right, '''then''' right again, '''then''' keep going until you reach the service station.''
+#*{{quote-book|year=1913|author={{w|Joseph C. Lincoln}}
+|title=[http://openlibrary.org/works/OL5535161W Mr. Pratt's Patients]|chapter=1
+|passage=Then there came a reg'lar terror of a sou'wester same as you don't get one summer in a thousand, and blowed the shanty flat and ripped about half of the weir poles out of the sand. We spent consider'ble money getting 'em reset, and '''then''' a swordfish got into the pound and tore the nets all to slathers, right in the middle of the squiteague season.}}
+#: {{usex|He fixed it, '''then''' left.}}
+#: {{usex|Turn left, '''then''' right, '''then''' right again, '''then''' keep going until you reach the service station.}}
 # {{context|sequence|lang=en}} Next in order; in addition.
-#: ''There are three green ones, '''then''' a blue one.''
+#: {{usex|There are three green ones, '''then''' a blue one.}}
 # {{context|conjunctive|lang=en}} In that case.
-#: ''If it’s locked, '''then''' we’ll need the key.''
-#: ''Is it 12 o'clock already? '''Then''' it's time for me to leave.''
-#: ''You don't like potatoes? What do you want me to cook, '''then'''?''
+#: {{usex|If it’s locked, '''then''' we’ll need the key.}}
+#: {{usex|Is it 12 o'clock already? '''Then''' it's time for me to leave.}}
+#: {{usex|You don't like potatoes? What do you want me to cook, '''then'''?}}
 # {{context|sequence|lang=en}} [[at the same time|At the same time]]; [[on the other hand]].
-#: ''That’s a nice shirt, but '''then''', so is the other one.''
+#: {{usex|That’s a nice shirt, but '''then''', so is the other one.}}
 # {{context|obsolete|lang=en}} At the time that; [[when]].
-#* '''1485''', [[w:Thomas Malory|Sir Thomas Malory]], ''Le Morte Darthur'', Book I.23, reprinted 1817, Sir Thomas Malory, [[w:William Caxton|William Caxton]], ''Morte Darthur: The Byrth, Lyf, and Actes of Kyng Arthur'', Volume 1, [http://books.google.com.au/books?id=eaUKAAAAYAAJ&pg=PA37&dq=%22the+knyght+sawe+hym+lye+soo+on+the+ground%22&hl=en&sa=X&ei=rAgPT5-YI8O5iAeAobDgCQ&redir_esc=y#v=onepage&q=%22the%20knyght%20sawe%20hym%20lye%20soo%20on%20the%20ground%22&f=false page 37]:
+#* '''1485''', Sir {{w|Sir Thomas Malory}}, ''Le Morte Darthur'', Book I.23, reprinted 1817, Sir Thomas Malory, {{w|William Caxton}}, ''Morte Darthur: The Byrth, Lyf, and Actes of Kyng Arthur'', Volume 1, [http://books.google.com.au/books?id=eaUKAAAAYAAJ&pg=PA37&dq=%22the+knyght+sawe+hym+lye+soo+on+the+ground%22&hl=en&sa=X&ei=rAgPT5-YI8O5iAeAobDgCQ&redir_esc=y#v=onepage&q=%22the%20knyght%20sawe%20hym%20lye%20soo%20on%20the%20ground%22&f=false page 37]:
 #*: '''Than''' the knyght sawe hym lye soo on the ground, he alyght and was passynge heuy, for he wende he had slayne hym [...].
-# {{context|UK|dialect|affirmation|lang=en}} used to contradict an assertion.
-#* '''2001''', Eric Malpass, ''At the Height of the Moon'', [http://books.google.com.au/books?id=cClq1igzauQC&pg=PA28&dq=%22She+says+Indian+elephants+are+tidgy+little+things%22&hl=en&sa=X&ei=9gsPT9qlMYeaiQf4kdwu&ved=0CDIQ6AEwAA#v=onepage&q=%22She%20says%20Indian%20elephants%20are%20tidgy%20little%20things%22&f=false page 28],
+# {{context|UK|dialect|affirmation|lang=en}} Used to contradict an assertion.
+#* '''2001''', {{w|Eric Malpass}}, ''At the Height of the Moon'', [http://books.google.com.au/books?id=cClq1igzauQC&pg=PA28&dq=%22She+says+Indian+elephants+are+tidgy+little+things%22&hl=en&sa=X&ei=9gsPT9qlMYeaiQf4kdwu&ved=0CDIQ6AEwAA#v=onepage&q=%22She%20says%20Indian%20elephants%20are%20tidgy%20little%20things%22&f=false page 28],
 #*: ‘She says Indian elephants are tidgy little things.’
 #*: ‘They′re not '''then'''.’ Emma was getting heated. ‘They′re –’
 #*: ‘Emma!’ said Jenny sharply. The child subsided.
