--- a/en/-/-ica.801322.wikitext
+++ b/en/-/-ica.801322.wikitext
@@ -66,7 +66,7 @@ Not productive, and rarely used; {{term|-ana}} and {{term|-ia}} are more common.
 ====Suffix====
 {{sh-suffix|r|-ица}}
 
-# # {{non-gloss definition|Feminine form of {{term|-ik|lang=sh}}.}}
+# {{non-gloss definition|Feminine form of {{term|-ik|lang=sh}}.}}
 
 ===See also===
 * {{l|sh|-čica}}
