[[Category:English eponyms]] <Markovian#21377104>

--- a/en/m/Markovian.776104.wikitext
+++ b/en/m/Markovian.776104.wikitext
@@ -1,11 +1,9 @@
 ==English==
 
 ===Etymology===
-
 {{suffix|Markov|ian}}, named for the Russian mathematician [[w:Andrey Markov|Andrey Markov]].
 
 ===Pronunciation===
-
 * {{a|US}} {{IPA|maɹˈkoʊviən}}
 
 ===Adjective===
@@ -21,3 +19,5 @@
 
 ====See also====
 * {{pedia|Markov property}}
+
+[[Category:English eponyms]]
