--- a/en/s/seize.26061.wikitext
+++ b/en/s/seize.26061.wikitext
@@ -1,7 +1,7 @@
 ==English==
 
 ===Etymology===
-Earlier {{term|seise|lang=en}}, from {{etyl|enm|en}} {{term|seisen|lang=enm}}, {{term|sesen|lang=enm}}, {{term|saisen|lang=enm}}, from {{etyl|fro|en}} {{term|seisir|lang=fro}} 'take possession of; invest (person, court) (compare {{etyl|fr|-}} {{term|saisir|lang=fr}} 'to seize; invest a court'), from {{etyl|ML.|en}} {{term|sacire|sacīre|lang=la}} (8th century) 'to lay claim to, appropriate' in the phrase {{term||ad propriam sacire}}, from Low {{etyl|frk|en}} *''sakian'' 'to sue, bring legal action', from {{etyl|gem-pro|en}} {{recons|sakōnan|lang=gem-pro}} (compare {{etyl|ang|-}} ''[[sacian]]'' 'to strive, brawl'), from *''sakanan'' (compare {{etyl|osx|-}} ''sakan'' 'to accuse', {{etyl|goh|-}} ''sahhan'' 'to bicker, quarrel, rebuke', {{etyl|ang|-}} ''[[sacan]]'' 'to quarrel, claim by law, accuse').<ref>C.T. Onions, ed., Oxford Dictionary of English Etymology, s.v. "seize" (Oxford: Clarendon Press, 1996), 807.</ref>  See [[sake]].
+Earlier {{term|seise|lang=en}}, from {{etyl|enm|en}} {{term|seisen|lang=enm}}, {{term|sesen|lang=enm}}, {{term|saisen|lang=enm}}, from {{etyl|fro|en}} {{term|seisir|lang=fro}} 'take possession of; invest (person, court) (compare {{etyl|fr|-}} {{term|saisir|lang=fr}} 'to seize; invest a court'), from {{etyl|ML.|en}} {{term|sacire|sacīre|lang=la}} (8th century) 'to lay claim to, appropriate' in the phrase {{term||ad propriam sacire}}, from Low {{etyl|frk|en}} *''sakian'' 'to sue, bring legal action', from {{etyl|gem-pro|en}} {{recons|sakōną|lang=gem-pro}} (compare {{etyl|ang|-}} ''[[sacian]]'' 'to strive, brawl'), from *''sakanan'' (compare {{etyl|osx|-}} ''sakan'' 'to accuse', {{etyl|goh|-}} ''sahhan'' 'to bicker, quarrel, rebuke', {{etyl|ang|-}} ''[[sacan]]'' 'to quarrel, claim by law, accuse').<ref>C.T. Onions, ed., Oxford Dictionary of English Etymology, s.v. "seize" (Oxford: Clarendon Press, 1996), 807.</ref>  See [[sake]].
 
 ===Pronunciation===
 * {{enPR|sēz}}, {{IPA|/siːz/}}, {{X-SAMPA|/si:z/}}
