--- a/en/l/labourious.803568.wikitext
+++ b/en/l/labourious.803568.wikitext
@@ -3,7 +3,7 @@
 ===Adjective===
 '''labourious'''
 
-# {{misspelling of|laborious}}
+# British English spelling of {{laborious}}
 
 [[es:labourious]]
 [[my:labourious]]
