--- a/en/b/bamboo.746517.wikitext
+++ b/en/b/bamboo.746517.wikitext
@@ -54,6 +54,7 @@ From {{etyl|nl|en}} {{term|bamboe|lang=nl}}, from {{etyl|pt|en}} {{term|bambu|la
 * Kannada: {{t+|kn|ಬಿದಿರು|tr=bidiru|sc=Knda}}
 * Khmer: {{t|km|ឫស្សី|tr=rɨhsəy|sc=Khmr}}
 * Korean: {{t+|ko|대나무|tr=daenamu|sc=Kore}}
+* Kyrgyz:{{t+|ky|бамбук|m|tr=bambúk|sc=Cyrl}}
 * Lao: {{t-|lo|ໄມ້ໄຜ່|tr=mai-phai|sc=Laoo}}
 * Latin: {{t-|la|harundo Indica|f|alt=harundō Indica}}
 * Macedonian: {{t-|mk|бамбус|m|tr=bámbus}}
@@ -176,6 +177,7 @@ The translations below need to be checked by native speakers and inserted into t
 [[io:bamboo]]
 [[kn:bamboo]]
 [[ku:bamboo]]
+[[ky:bamboo]]
 [[lo:bamboo]]
 [[hu:bamboo]]
 [[mg:bamboo]]
