--- a/en/ι/ιταλικός.4256.wikitext
+++ b/en/ι/ιταλικός.4256.wikitext
@@ -18,7 +18,7 @@ From {{term|Ιταλία|tr=Italia||Italy|lang=el}}, from {{etyl|la|el}} ''[[Ita
 :''see:'' {{el-l|Ιταλία|tr=Italía|gloss=Italy|g=f}}
 
 ====See also====
-* {{el-p|πλάγιοι|χαρακτήρες|tr=plágioi charaktíres|g=m-p|gloss=italics, italic characters|sc=Grek}}
+* {{l|el|[[πλάγιος|πλάγιοι]] [[χαρακτήρες]]|πλάγιοι χαρακτήρες|g=m-p|gloss=italics, italic characters}}
 
 {{DEFAULTSORT:ιταλικοσ}}
 
