--- a/en/s/staff.34070.wikitext
+++ b/en/s/staff.34070.wikitext
@@ -59,6 +59,7 @@
 * Indonesian: [[toya]]
 {{trans-mid}}
 * Italian: {{t+|it|bastone|m}}, {{t+|it|asta|f}}
+* Japanese: {{t|ja|杖|tr=tsue|sc=Jpan}}, {{t|ja|棒|tr=bō|sc=Jpan}}
 * Latin: {{t-|la|baculum}}
 * Macedonian: {{t-|mk|стап|m|tr=stap}}
 * Malagasy: {{t|mg|langilangy}}, {{t|mg|tehina}}
