--- a/en/s/staff.34070.wikitext
+++ b/en/s/staff.34070.wikitext
@@ -87,6 +87,7 @@
 * Greek: {{t+|el|πεντάγραμμο|n|tr=pentágrammo|sc=Grek}}
 {{trans-mid}}
 * Italian: {{t+|it|pentagramma|m}}
+* Japanese: {{t|ja|譜表|tr=fuhyō|sc=Jpan}}, {{t|ja|五線|tr=gosen|sc=Jpan}}
 * Macedonian: {{t-|mk|петолиние|n|tr=petolínie}}
 * Polish: {{t-|pl|pięciolinia|f}}
 * Portuguese: {{t+|pt|pauta|f}}
