--- a/en/s/sawtooth.776083.wikitext
+++ b/en/s/sawtooth.776083.wikitext
@@ -17,7 +17,13 @@ From {{compound|saw|tooth|lang=en}}
 
 ====Translations====
 {{trans-top|cutting bit of a saw}}
+* Chinese:
+*: Mandarin: {{t|cmn|鋸齒|sc=Hani}}, {{t|cmn|锯齿|tr=jùchǐ|sc=Hani}}
+* French: {{t|fr|dent de scie|m}}
 {{trans-mid}}
+* German: {{t|de|Sägezahn|m}}
+* Japanese: {{t|ja|のこぎり歯|tr=のこぎりは, nokogiri ha|sc=Jpan}}
+* Russian: {{t|ru|зуб пилы|m|tr=zub pilý|sc=Cyrl}}
 {{trans-bottom}}
 
 {{trans-see|sawtooth wave}}
