--- a/en/s/sawtooth.776083.wikitext
+++ b/en/s/sawtooth.776083.wikitext
@@ -22,8 +22,8 @@ From {{compound|saw|tooth|lang=en}}
 * French: {{t|fr|dent de scie|m}}
 {{trans-mid}}
 * German: {{t|de|Sägezahn|m}}
-* Japanese: {{t|ja|のこぎり歯|tr=のこぎりは, nokogiri ha|sc=Jpan}}
-* Russian: {{t|ru|зуб пилы|m|tr=zub pilý|sc=Cyrl}}
+* Japanese: {{t-SOP|ja|[[のこぎり]][[歯]]|tr=のこぎりは, nokogiri ha|sc=Jpan}}
+* Russian: {{t-SOP|ru|[[зуб]] [[пила|пилы]]|m|tr=zub pilý|sc=Cyrl}}
 {{trans-bottom}}
 
 {{trans-see|sawtooth wave}}
