--- a/en/s/sawtooth.776083.wikitext
+++ b/en/s/sawtooth.776083.wikitext
@@ -18,7 +18,7 @@ From {{compound|saw|tooth|lang=en}}
 ====Translations====
 {{trans-top|cutting bit of a saw}}
 * Chinese:
-*: Mandarin: {{t|cmn|鋸齒|sc=Hani}}, {{t|cmn|锯齿|tr=jùchǐ|sc=Hani}}
+*: Mandarin: {{t-SOP|cmn|[[鋸]][[齒]]|sc=Hani}}, {{t-SOP|cmn|[[锯]][[齿]]|tr=jùchǐ|sc=Hani}}
 * French: {{t|fr|dent de scie|m}}
 {{trans-mid}}
 * German: {{t|de|Sägezahn|m}}
