t+cmn:[[嗯]] ([[WT:EDIT|Assisted]]) <yeah#21403891>

--- a/en/y/yeah.4305.wikitext
+++ b/en/y/yeah.4305.wikitext
@@ -25,7 +25,7 @@ Alternative etymology derives ''yeah'' from a drawling pronunciation of {{term|y
 * Arabic: {{t-|ar|أيوة|tr='áywa}} {{qualifier|Eastern Arabic}}, {{t-|ar|إية|tr='íyya}} {{qualifier|Western Arabic}}
 * Catalan: {{t+|ca|sí}}
 * Chinese:
-*: Mandarin: {{t|cmn|是啊|tr=shì a|sc=Hani}}, {{t|cmn|對啊|sc=Hani}}, {{t|cmn|对啊|tr=duì a|sc=Hani}}, {{t|cmn|啊|tr=à|sc=Hani}}
+*: Mandarin: {{t|cmn|是啊|tr=shì a|sc=Hani}}, {{t|cmn|對啊|sc=Hani}}, {{t|cmn|对啊|tr=duì a|sc=Hani}}, {{t|cmn|啊|tr=à|sc=Hani}}, {{t|cmn|嗯|tr=èn|sc=Hani}}
 * Czech: {{t+|cs|jo}}, {{t+|cs|no}} <!-- Yes, this is in the right place, "no" means "yeah" or "yep" in Czech, Slovak, Polish -->
 * Dutch: {{t+|nl|ja}}, {{t+|nl|jawel}}
 * Finnish: {{t+|fi|joo}}, {{t+|fi|juu}}
