--- a/en/s/sir.26262.wikitext
+++ b/en/s/sir.26262.wikitext
@@ -185,6 +185,13 @@ From {{etyl|sla-pro|sl}} {{recons|syrъ|lang=sla-pro}}.
 
 ----
 
+==Uzbek==
+
+===Noun===
+{{uz-noun}}
+
+# [[cheese]]
+
 ==Welsh==
 
 ===Noun===
@@ -230,6 +237,7 @@ From {{etyl|sla-pro|sl}} {{recons|syrъ|lang=sla-pro}}.
 [[tg:sir]]
 [[tr:sir]]
 [[ug:sir]]
+[[uz:sir]]
 [[vi:sir]]
 [[wa:sir]]
 [[zh:sir]]
