--- a/en/o/Olympus Mons.854983.wikitext
+++ b/en/o/Olympus Mons.854983.wikitext
@@ -3,9 +3,9 @@
 ===Etymology===
 Named in 1973 after the [[albedo feature]] {{term|Nix Olympica||Snows of Olympus}}.
 
-===Proper noun===
 {{wikipedia}}
-'''[[Olympus]] [[Mons]]'''
+===Proper noun===
+{{mul-proper noun|head=[[Olympus]] [[Mons]]}]
 
 # {{context|surface feature|lang=en}} An [[extinct]] [[volcano]] and [[prominent]] [[feature]] on the [[planet]] [[Mars]], notable as the highest [[mountain]] in the [[solar system]] (elevation: 27 [[kilometers]]).
 
