--- a/en/b/bind.6798.wikitext
+++ b/en/b/bind.6798.wikitext
@@ -71,6 +71,7 @@ From {{etyl|enm|en}} {{term|binden|lang=enm}}, from {{etyl|ang|en}} {{term|binda
 ====Translations====
 {{trans-top|''transitive'' connect}}
 * Arabic: {{t-|ar|ربط|tr=rabaṭa}}
+* Belarusian: {{t|be|вязаць|tr=vjazác’|sc=Cyrl}}
 * Bulgarian: {{t+|bg|свързвам}}
 * Chinese:
 *: Mandarin: {{t|cmn|包紮|sc=Hani}}, {{t|cmn|包扎|tr=bāozhā, bāozā|sc=Hani}}, {{t|cmn|捆|tr=kǔn|sc=Hani}}, {{t|cmn|綁|sc=Hani}}, {{t|cmn|绑|tr=bǎng|sc=Hani}}
