--- a/en/w/weight.7355.wikitext
+++ b/en/w/weight.7355.wikitext
@@ -278,7 +278,7 @@ From {{etyl|ang|en}} ''[[wiht]]'', ''ġewiht'', from {{etyl|gem-pro|en}} {{recon
 {{trans-bottom}}
 
 {{trans-top|to handicap a horse}}
-* Finnish: [[lisätä#Finnish|lisätä}} {{t+|fi|paino}}
+* Finnish: [[lisätä#Finnish|lisätä]] {{t+|fi|paino}}
 {{trans-mid}}
 {{trans-bottom}}
 
