--- a/en/m/mind-numbing.775549.wikitext
+++ b/en/m/mind-numbing.775549.wikitext
@@ -1,7 +1,7 @@
 ==English==
 
 ===Adjective===
-'''[[mind]]-[[numbing]]'''
+{{head|en|adjective|head=[[mind]]-[[numbing]]}}
 
 # {{context|idiomatic|lang=en}} Excessively [[boring]], [[tedious]], or [[dull]]; [[repetitive]]; of an [[activity]], etc., lacking any [[interest]] or [[variety]] that might serve as [[intellectual]] [[stimulation]].
 #: ''After hours of '''mind-numbing''' work sorting hundreds of nearly identical form, he needed to stop and do something else.''
