* <forty-ninth parallel#21437864>

--- a/en/f/forty-ninth parallel.776643.wikitext
+++ b/en/f/forty-ninth parallel.776643.wikitext
@@ -8,4 +8,4 @@
 # {{context|Canada|US|nonstandard|lang=en}}  A [[nickname]] for the entire border between Canada and the USA.
 
 ===References===
-*"[http://encarta.msn.com/dictionary_/forty-ninth_parallel.html forty-ninth parallel]" in ''Encarta® World English Dictionary'' [North American Edition] © & (P)2007 Microsoft Corporation.
+* {{R:OneLook}}
