--- a/en/p/pile of shit.742053.wikitext
+++ b/en/p/pile of shit.742053.wikitext
@@ -4,10 +4,14 @@
 ''[[pile]]'' + ''[[of]]'' + ''[[shit]]''
 
 ===Noun===
-{{en-noun|-}}
+{{en-noun|piles of shit|-}}
 
-# {{context|vulgar|slang|lang=en}} Something that is not true.
-#: ''They said he survived the fall? What a pile of shit!''
+# {{context|vulgar|slang|lang=en}} Something that is not true, a mass of lies (refers to [[bullshit]]).
+#: ''They said he survived the fall? What a '''pile of shit'''!''
+# {{context|vulgar|slang|lang=en}} Any worthless structure or device.
+#: ''Take this '''pile of shit''' back where you bought it and get your money back.''
+# {{context|vulgar|slang|lang=en}} A totally worthless person. 
+#: ''Todd, you are the biggest '''pile of shit''' I've ever seen.''
 
 ====See also====
 *[[bullshit]]
