--- a/en/t/then.7353.wikitext
+++ b/en/t/then.7353.wikitext
@@ -68,7 +68,7 @@ From {{etyl|enm|en}} {{term|then|then(ne)|lang=enm}}, {{term|than|than(ne)|lang=
 * Icelandic: {{t+|is|þá}}
 * Indonesian: {{t-|id|saat itu}}
 * Italian: {{t+|it|allora}}
-* Japanese: {{t-|ja|そのとき|tr=sono toki}} ({{t-|ja|その時}}), {{t-|ja|その時点|tr=そのじてん, sono jiten}}
+* Japanese: {{t-|ja|その時|tr=そのとき, sono toki}}, {{t-|ja|その時点|tr=そのじてん, sono jiten}}
 * Khmer: {{t-|km|ពេលនោះ|tr=peil nuh|sc=Khmr}}, {{t-|km|កាលនោះ|tr=kaal nuh|sc=Khmr}}
 * Korean: {{t+|ko|그때|tr=geuttae|sc=Kore}}, {{t-|ko|그 때|tr=geu ttae|sc=Kore}}
 * Kurdish: [[hingê]], [[wê]] [[dem|demê]], [[wî]] [[çax|çaxî]], wî [[wext|wextî]], wê [[gav|gavê]]
