/* Translations */fixing language name/code using [[Project:AWB|AWB]] <island#21466320>

--- a/en/i/island.4316.wikitext
+++ b/en/i/island.4316.wikitext
@@ -151,7 +151,7 @@ From earlier {{term|iland|lang=en}}, from {{etyl|enm|en}} {{term|iland|lang=enm}
 * Kazakh: {{t-|kk|арал|tr=aral|sc=Cyrl}}, {{t|kk|атау|tr=ataw|sc=Cyrl}}
 * Khakas: {{tø|kjh|олтырых|tr=oltırıx|sc=Cyrl}}
 * Khmer: {{t+|km|កោះ|tr=goh|sc=Khmr}}
-* Komi: {{tø|kv|ді|tr=di|sc=Cyrl}}
+* Komi-Zyrian: {{tø|kv|ді|tr=di|sc=Cyrl}}
 * Komi-Permyak: {{tø|koi|ди|tr=di}}
 * Korean: {{t+|ko|섬|tr=seom|sc=Hang}}
 * Kumyk: {{tø|kum|атав|tr=ataw|sc=Cyrl}}
