--- a/en/c/CD.26224.wikitext
+++ b/en/c/CD.26224.wikitext
@@ -77,7 +77,7 @@ Abbreviation of various terms and phrases.
 ===Particle===
 {{head|en|particle}}
 
-# {{non-gloss definition|An abbreviation found on decals of automobiles, indicating that they are used by diplomats. From the French phrase {{term|corps diplomatique||[[diplomatic]] [[corps]]}}.}}
+# {{non-gloss definition|An abbreviation found on decals of automobiles, indicating that they are used by diplomats. From the French phrase {{term|corps diplomatique||[[diplomatic]] [[corps]]}}.|lang=fr}}
 
 ===Anagrams===
 * [[DC#English|DC]], [[Dc#English|Dc]], [[dc#English|dc]]
@@ -174,8 +174,8 @@ From {{etyl|en|de}} {{term|CD|lang=en}}.
 ===Alternative forms===
 * {{l/no|cd}}
 
-===Initialism===
-{{no-initialism|g=m}}
+===Noun===
+{{head|no|noun|cat2=initialisms|g=m}}
 
 # [[#English|CD]] (disc)
 
