t+hy:[[տեղյակ]] t+hy:[[բիթի]] ([[WT:EDIT|Assisted]]) <in the know#21476420>

--- a/en/i/in the know.742284.wikitext
+++ b/en/i/in the know.742284.wikitext
@@ -17,7 +17,7 @@
 ====Translations====
 {{trans-top|informed, aware}}
 * {{trreq|ar}}
-* {{trreq|hy}}
+* Armenian: {{t|hy|տեղյակ|sc=Armn}}, {{t|hy|բիթի|sc=Armn}}
 * {{trreq|bg}}
 * {{trreq|ca}}
 * Chinese:
