t+fa:[[خونریزی]] ([[WT:EDIT|Assisted]]) <bleed#21477529>

--- a/en/b/bleed.6801.wikitext
+++ b/en/b/bleed.6801.wikitext
@@ -150,6 +150,7 @@ From {{etyl|ang|en}} {{term|bledan|blēdan|lang=ang}}, from {{etyl|gem-pro|en}} 
 * Dutch: {{t+|nl|bloeding}}
 {{trans-mid}}
 * German: {{t+|de|Blutung}}
+* Persian: {{t|fa|خونریزی|tr=xunrizi|sc=fa-Arab}}
 {{trans-bottom}}
 
 {{trans-top|edge around layout}}
