--- a/en/e/embay.802830.wikitext
+++ b/en/e/embay.802830.wikitext
@@ -9,6 +9,9 @@ From {{prefix|em|bay|gloss2=bathe}}.
 # {{context|transitive|obsolete|lang=en}} To [[bathe]]; to [[steep]].
 #*'''1590''', {{w|Edmund Spenser}}, ''The Faerie Queene'', III.11:
 #*:Sweete Love, that doth his golden wings '''embay''' / In blessed Nectar and pure Pleasures well […].
+#* '''1600''', {{w|Edward Fairfax}}, The ''Jerusalem Delivered'' of Tasso, XII, lxii:
+#*: ''Their swords both points and edges sharp '''embay'''''
+#*:: ''In purple blood whereso they hit or light.''
 
 ===Etymology 2===
 From {{prefix|em|bay}}.
