--- a/en/b/bamboo.746517.wikitext
+++ b/en/b/bamboo.746517.wikitext
@@ -142,6 +142,7 @@ The translations below need to be checked by native speakers and inserted into t
 
 # {{context|transitive|lang=en}} To [[flog]] with a bamboo [[cane]].
 
+[[Category:en:Grasses]]
 ----
 
 ==Gooniyandi==
