rv PSI Undo revision 20866930 by [[Special:Contributions/Lawrence J. Howell|Lawrence J. Howell]] ([[User talk:Lawrence J. Howell|talk]]) <月#21511571>

--- a/en/月/月.4427.wikitext
+++ b/en/月/月.4427.wikitext
@@ -2,9 +2,9 @@
 {{stroke order|type=animate}}
 {{stroke order}}
 
-===Phonosemantic interpretation===
+===Phonosemantic Interpretation===
 
-[[w:Old_Chinese|Old Chinese]] [[w:Old_Chinese_phonology#Initials|Initial]] {{IPAchar|/*k-/}} lends semantic value '''Frame'''. [[w:Old_Chinese_phonology#Vowels|Vowel]] {{IPAchar|/*-ua-/}} lends semantic value '''Curving/Round'''. [[w:Old_Chinese_phonology#Tones_and_final_consonants|Final consonant]] {{IPAchar|/*-t/}} lends semantic value '''Cut/Divide/Reduce'''. {{liushu|p}} of a crescent moon, observed as a scooped-out portion of the full moon → month. Monday is a [[w:Chinese_characters#Transformed_cognates|borrowed meaning]]. Source: [http://www.kanjinetworks.com/eng/kanji-dictionary/online-kanji-etymology-dictionary.cfm?kanji_id=KUAT12 Howell & Morimoto]
+[[w:Old_Chinese|Old Chinese]] [[w:Old_Chinese_phonology#Initials|Initial]] *k- lends semantic value '''Frame'''. [[w:Old_Chinese_phonology#Vowels|Vowel]] *-ua- lends semantic value '''Curving/Round'''. [[w:Old_Chinese_phonology#Tones_and_final_consonants|Final consonant]] *-t lends semantic value '''Cut/Divide/Reduce'''. {{liushu|p}} of a crescent moon, observed as a scooped-out portion of the full moon → month. Monday is a [[w:Chinese_characters#Transformed_cognates|borrowed meaning]]. Source: [http://www.kanjinetworks.com/eng/kanji-dictionary/online-kanji-etymology-dictionary.cfm?kanji_id=KUAT12 Howell & Morimoto]
 
 ===Etymology===
 {{liushu|p}}, originally of the [[crescent]] [[moon]].
