fixing entries in [[Category:English alternative forms]] but not in 'part of speech' category using [[Project:AWB|AWB]] <sea mark#21539492>

--- a/en/s/sea mark.742310.wikitext
+++ b/en/s/sea mark.742310.wikitext
@@ -1,7 +1,9 @@
 ==English==
-===Noun===
 {{wikipedia}}
-'''[[sea]] [[mark]]'''
-#{{alternative spelling of|seamark}}
+
+===Noun===
+{{en-noun|head=[[sea]] [[mark]]}}
+
+# {{alternative spelling of|seamark|lang=en}}
 
 [[zh:sea mark]]
