/* English */  eo translation <CD-ROM#21560707>

--- a/en/c/CD-ROM.26226.wikitext
+++ b/en/c/CD-ROM.26226.wikitext
@@ -12,6 +12,10 @@
 
 ===See also===
 * {{pedia}}
+=== Translations ===
+{{trans-top|CD-ROM}}
+* Esperanto: {{t|eo|KD-NLM}}
+{{trans-bottom}}
 
 [[cs:CD-ROM]]
 [[de:CD-ROM]]
