/* Interjection */fixing entries in [[Category:English alternative forms]] but not in 'part of speech' category using [[Project:AWB|AWB]] <watevs#21561617>

--- a/en/w/watevs.803478.wikitext
+++ b/en/w/watevs.803478.wikitext
@@ -1,9 +1,9 @@
 ==English==
 
 ===Interjection===
-'''watevs'''
+{{head|en|interjection}}
 
-# {{alternative spelling of|whatevs}}
+# {{alternative spelling of|whatevs|lang=en}}
 
 ===Anagrams===
 * [[T-waves#English|T-waves]]
