--- a/en/d/dropt.856327.wikitext
+++ b/en/d/dropt.856327.wikitext
@@ -1,10 +1,9 @@
 ==English==
 
 ===Verb===
-'''dropt'''
+{{head|en}}
 
 # {{en-past of|drop|nodot=1}}; {{obsolete spelling of|dropped|lang=en|nocap=1}}
-
 
 [[li:dropt]]
 [[nl:dropt]]
