t+ru:[[саблезубый тигр]] ([[WT:EDIT|Assisted]]) <sabre-toothed tiger#21576793>

--- a/en/s/sabre-toothed tiger.801837.wikitext
+++ b/en/s/sabre-toothed tiger.801837.wikitext
@@ -28,7 +28,7 @@
 * Korean: {{t-|ko|검치호|tr=geomchiho}} ({{t-|ko|劍齒虎}})
 * Norwegian: {{t-|no|sabeltanntiger|m}}, {{t-|no|sabeltannkatt|m}}
 * Portuguese: {{t-|pt|tigre-dente-de-sabre|m}}
-* Russian: {{t-|ru|саблезубая кошка|f|tr=sablezúbaja kóška}} {{qualifier|lit.: sabre-toothed cat}}
+* Russian: {{t-|ru|саблезубая кошка|f|tr=sablezúbaja kóška}} {{qualifier|lit.: sabre-toothed cat}}, {{t|ru|саблезубый тигр|m|tr=sablezúbyj tigr|sc=Cyrl}}
 * Spanish: {{t-|es|diente de sable|m}}
 * Swedish: {{t-|sv|sabeltandad tiger|c}}
 {{trans-bottom}}
