t+ru:[[саблезубый]] ([[WT:EDIT|Assisted]]) <sabre-toothed#21576797>

--- a/en/s/sabre-toothed.801836.wikitext
+++ b/en/s/sabre-toothed.801836.wikitext
@@ -12,6 +12,7 @@
 {{trans-top}}
 * Finnish: {{t-|fi|sapelihampainen}}
 {{trans-mid}}
+* Russian: {{t|ru|саблезубый|tr=sablezúbyj|sc=Cyrl}}
 {{trans-bottom}}
 
 ===Anagrams===
