/* Verb */ #* Shakespeare  #*: If he were putting to my house the brand / That shall '''consume''' it.  #* Bible, Matthew vi. 20  #*: Lay up for yourselves treasures in heaven, where neither moth nor rust doth '''consume'''. <consume#21633507>

--- a/en/c/consume.34056.wikitext
+++ b/en/c/consume.34056.wikitext
@@ -20,8 +20,12 @@ From {{etyl|fro|en}} {{term|consumer|lang=fro}}, from {{etyl|la|en}} {{term|cons
 #: ''Desire '''consumed''' him.''
 # {{context|transitive|lang=en}} To [[destroy]] completely.
 #: ''The building was '''consumed''' by fire.''
+#* Shakespeare
+#*: If he were putting to my house the brand / That shall '''consume''' it.
+#* Bible, Matthew vi. 20
+#*: Lay up for yourselves treasures in heaven, where neither moth nor rust doth '''consume'''.
 # {{context|intransitive|obsolete|lang=en}} To [[waste away]] slowly.
-#* Shakespeare:
+#* Shakespeare
 #*: Therefore, let Benedick, like cover'd fire, / '''Consume''' away in sighs.
 #* '''1899''', Kate Chopin, ''The Awakening'':
 #*: He assured her the child was '''consuming''' at that moment in the next room.
